CI images update

--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-10 03:56:28
+lastsearch = 2024-08-10 05:40:15
 
 [demxanh.com]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc cao bằng 1.4 X 1.95
 url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
-match = 43.5%%
-title = Chiếu trúc cao bằng 1.4m x 1.95
-url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
+match = -73.9%%
+title = Chiếu trúc Cao Bằng loại một, có 5 loại kích thước 1,2m ...
+url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-loại-một-có-5-loại-kích-thước-1-2m-1m-0.9mvà-0.8m-i.17414239.2656259371
 
 [lombom.com]
 match = -60.9%%
@@ -32,9 +32,9 @@ title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
 
 [chieutrucsaigon.com]
-match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = -13.0%%
+title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [khodem.vn]
 match = -56.5%%
@@ -62,14 +62,14 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [baocaobang.vn]
-match = -78.3%%
-title = Thành phố Cao Bằng ngày 14/10 không mưa, nhiệt độ cao ...
-url = https://baocaobang.vn/Thanh-pho-Cao-Bang-ngay-1410-khong-mua-nhiet-do-cao-nhat-28oC-27033.html
+match = -113.0%%
+title = Văn bằng bảo hộ chỉ dẫn địa lý giúp chiếu trúc có cơ hội ...
+url = https://baocaobang.vn/-23720.html
 
 [www.youtube.com]
-match = -126.1%%
-title = Đá lở từ trên núi xuống khiến 2 người thiệt mạng, 3 người bị ...
-url = https://www.youtube.com/watch?v=WDU4s69R1i4
+match = -95.7%%
+title = Cuộc đua Nhà Trắng: Ông D.Trump và bà K.Harris sắp có ...
+url = https://www.youtube.com/watch?v=1_JN4rFqxOA
 
 [chieu.com.vn]
 match = -43.5%%
