--- a/images/nem-everon-200x200x9/config.ini
+++ b/images/nem-everon-200x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-200x200x9.html
 lastopen = 2024-06-06 17:10:44
 
 [search]
-lastsearch = 2024-08-09 15:49:18
+lastsearch = 2024-08-10 05:49:02
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -37,9 +37,9 @@ title = Nệm Bông Ép Hanvico Vải Gấm
 url = https://remcuathaonguyen.com/nem-bong-ep-hanvico/nem-bong-ep-hanvico-vai-gam-213
 
 [demxanh.com]
-match = -115.0%%
-title = [HOT] Bảng giá nệm foam Oyasumi khuyến mại năm 2024
-url = https://demxanh.com/bang-gia-nem-foam-oyasumi.html
+match = -75.0%%
+title = Đệm bông ép 1m8x2m (180x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [thegioidemonline.com]
 match = -140.0%%
