--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-10 05:18:35
+lastsearch = 2024-08-10 05:38:33
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -262,9 +262,9 @@ title = Be Decor – Be Decor
 url = https://bedecor.com/
 
 [www.google.com]
-match = -200.0%%
-title = https://www.google.com/maps/@21.0506866,105.804746...
-url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
+match = -112.5%%
+title = maps/@21.001139,105.847882,17z?hl=vi
+url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [www.vinmec.com]
 match = -156.2%%
