--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-10 02:30:05
+lastsearch = 2024-08-10 05:45:58
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -12,9 +12,9 @@ title = Cửa hàng chiếu nhựa, mành, rèm, thảm uy tin tại Hà Nội
 url = https://www.maihuyencorp.com/shop
 
 [shopee.vn]
-match = 15.0%%
-title = Chiếu Nhựa Mai Huyền ❤️FREESHIP ...
-url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-❤️FREESHIP❤️-Chiếu-Nhựa-Hà-Nội-(1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m)-i.126028938.4749254076
+match = -60.0%%
+title = Chiếu nhựa 🍀𝑭𝑹𝑬𝑬 𝑺𝑯𝑰𝑷🍀Chiếu nhựa loại đẹp Hà Nội ...
+url = https://shopee.vn/Chiếu-nhựa-🍀𝑭𝑹𝑬𝑬-𝑺𝑯𝑰𝑷🍀Chiếu-nhựa-loại-đẹp-Hà-Nội-chiếu-nhựa-chiếu-nhựa-gấp-gọn-chiếu-ngủ-văn-phòng-du-lịch-i.533272024.25669597976
 
 [tchome.vn]
 match = 20.0%%
@@ -49,12 +49,12 @@ url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOoq23fkpDfHxggkt9S0zN_b0tyl4R2dhYI9qZCzRBxPcEYbB26gM
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOoqyDyhCbVFAXdvDAsYVCD4J13vSeHrd0nyaBT_hJU_NICbKGBoE
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOopSwYDJ8Vget4XdUnUMbj1yHQxNDRQ0gdPpOWd_voM06U9DtI-r
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOoq5p5fFwgopy8DKWAmKEXfkBUZFsVHMzsXEuIIXg8nVrr3lDHvK
 
 [thuanloitrading.com]
 match = 10.0%%
