--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-09 18:54:56
+lastsearch = 2024-08-10 05:43:13
 
 [www.tiktok.com]
-match = -235.3%%
-title = 1hairstylespalace (@hair_stylespalace)’s videos with original ...
-url = https://www.tiktok.com/@hair_stylespalace/video/7398866804589726982
+match = -152.9%%
+title = Trap has been set 💀 #hoa #deliveryheroes #surprise | hoa
+url = https://www.tiktok.com/@koltindarley/video/7359287495458295086?lang=en
 
 [casetext.com]
 match = -100.0%%
