--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-10 00:12:35
+lastsearch = 2024-08-10 05:46:19
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -99,7 +99,7 @@ url = https://vuanem.com/brand/everon
 [www.lazada.vn]
 match = -48.4%%
 title = Nệm Bông Ép Gấp 3 K-Bedding By Everon KMS nhiều kích ...
-url = https://www.lazada.vn/products/nem-bong-ep-gap-3-everon-lite-bao-hanh-5-nam-giao-mau-ngau-nhien-i559250099.html?srsltid=AfmBOop6M8HA4w0BteJuS1SgeKSIbYgPi95xhI9kOuQu-mg3_QYBy78B
+url = https://www.lazada.vn/products/nem-bong-ep-gap-3-everon-lite-bao-hanh-5-nam-giao-mau-ngau-nhien-i559250099.html
 
 [everonvietnam.com]
 match = -19.4%%
