--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-10 04:15:00
+lastsearch = 2024-08-10 05:40:56
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -33.3%%
-title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+match = -59.3%%
+title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
+url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron?srsltid=AfmBOooisHhhnxVqcgtJgk0NavoVpIsJVKtjTKccLmok1pWcgRkLaN9s
 
 [elambo.vn]
 match = -3.7%%
@@ -44,7 +44,7 @@ url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-cha
 [demxanh.com]
 match = -44.4%%
 title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
-url = https://demxanh.com/chan-ga-goi-olympia.html
+url = https://demxanh.com/chan-ga-goi-olympia.html?srsltid=AfmBOor4MlwoeUwhw4IDSVAAf18eAVX-djxisJ_BJYLAmYbob1seNxjs
 
 [www.thegioididong.com]
 match = -44.4%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome
+url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOorqc0g95uLGzh_z07-VF-VUqMiMnvX4qzrJGVRtHLF30dStIsAy
 
 [metruyen.me]
 match = 33.3%%
