CI images update

--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -61,3 +61,8 @@ match = -90.0%%
 title = Chiếu Trúc Tăm Ht giá rẻ Tháng 6,2024|BigGo Việt Nam
 url = https://vn.biggo.com/s/chiếu+trúc+tăm+ht/
 
+[vatlieuxaydung.org.vn]
+match = -157.1%%
+title = CÔNG BỐ
+url = https://vatlieuxaydung.org.vn/Upload/48/Nam_2022/Gia VLXD/Gia VLXD quang tri thang 4 nam 2022.pdf
+
