--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-10 02:57:26
+lastsearch = 2024-08-10 05:54:57
 
 [quizlet.com]
 match = -170.0%%
@@ -47,9 +47,9 @@ title = Loom + Forge Ren 16-pc. Stoneware Dinnerware Set
 url = https://www.jcpenney.com/p/loom-forge-ren-16-pc-stoneware-dinnerware-set/ppr5008057935?pTmplType=regular
 
 [en.wikipedia.org]
-match = 16.7%%
-title = MC Ren
-url = https://en.wikipedia.org/wiki/MC_Ren
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Ren_(philosophy)
 
 [books.google.com]
 match = -430.0%%
@@ -67,9 +67,9 @@ title = Ren DMC | SOMEONE SAID FROM MAN TO A MOUSE 🐁 ...
 url = https://www.instagram.com/ren.dmc/reel/C8zvblUNoqG/?hl=en
 
 [www.youtube.com]
-match = -310.0%%
-title = Reacting To: [LIVE REACTION] Ren -16 Bar Challenge
-url = https://www.youtube.com/watch?v=ondrqWwFPYw
+match = -170.0%%
+title = Ren - 16 bar challenge *REACTION*
+url = https://www.youtube.com/watch?v=DN-xEHVEvtM
 
 [www.va.gov]
 match = -210.0%%
