--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-09 15:42:44
+lastsearch = 2024-08-10 06:01:11
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -43,8 +43,8 @@ url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16036-ga-phu.html
 
 [cuahangchangagoidem.com]
 match = -45.8%%
-title = Top 28 Bộ Chăn Ga Gối Đẹp với Nhiều Kiểu Mới Nhất 2023
-url = https://cuahangchangagoidem.com/bo-chan-ga-goi-dep/
+title = Chăn Ga Gối Đệm Cao Cấp Giá Tốt Freeship Tích Điểm
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
 match = 0.0%%
