--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -12,14 +12,14 @@ title = Màn tự bung dinh vuong18
 url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 
 [www.mungbaobao.com]
-match = 20.8%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
+match = -41.7%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m - Loại 2 (Không Viền ...
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-rong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -29.2%%
-title = màn gấp vuông giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn gấp vuông
+match = -54.2%%
+title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -27,9 +27,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.mantubung.com]
-match = -12.5%%
-title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
-url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
+match = -8.3%%
+title = 1 CỬA - Mùng tự bung ĐỈNH VUÔNG 1m8 x 2m - Loại 2
+url = https://www.mantubung.com/mung-tu-bung-dinh-rong-loai-thuong-1m8-x-2m28007.html
 
 [www.lazada.vn]
 match = 25.0%%
@@ -185,4 +185,9 @@ url = https://tbmart.vn/san-pham/man-chup-tu-bung-dinh-vuong/
 match = 16.7%%
 title = Gạch bông gió đỏ đất nung Vuông 18
 url = https://bonggio.com/product/gach-bong-gio-do-dat-nung-vuong-18/
+
+[phuyen.gov.vn]
+match = -83.3%%
+title = Lãnh đạo tỉnh thăm, động viên các đơn vị thi công Dự án ...
+url = https://phuyen.gov.vn/wps/portal/home/trang-chu/chi-tiet/tin-tuc-su-kien/noi-bat/lonh+dao+tinh+tham,+dong+vien+cac+don+vi+thi+cung+du+on+cao+toc+bac+-+nam
 
