--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-10 02:52:53
+lastsearch = 2024-08-10 05:59:43
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -18.2%%
-title = NEM Fashion
-url = https://www.facebook.com/nemfashion.official/
+match = -5.6%%
+title = Nem Nướng Mỗ Lao - Hà Đông
+url = https://www.facebook.com/story.php/?story_fbid=767320398760395&id=100064473260604
 
 [thegioinem.com]
 match = -55.6%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -122.2%%
-title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
+match = -94.4%%
+title = Người Việt Bolsa/Orange County | ❤️‍🔥❤️‍🔥NEM CHUA ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2893614240788940/
 
 [emartmall.com.vn]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = CÁCH LÀM NEM HẢI SẢN NGON CHUẨN VỊ
 url = https://vuacua.vn/blogs/tips-va-cac-cong-thuc-nau-an/cach-lam-nem-hai-san-ngon-chuan-vi
 
 [cotienfoods.vn]
-match = -72.2%%
-title = Khi nào nem chua chín? Cách nhận biết ...
-url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
+match = -27.8%%
+title = Cách bảo quản nem chua tại nhà
+url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
 
 [icondenim.com]
 match = -133.3%%
