--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-08-10 05:29:37
+lastsearch = 2024-08-10 05:57:40
 
 [demxanh.com]
-match = -131.6%%
-title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
+match = -84.2%%
+title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
 url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
@@ -258,7 +258,7 @@ url = https://gis.harnett.org/portal/home/search.html?t=content&q=tags:"efektler
 
 [www.booking.com]
 match = -73.7%%
-title = 10 Best Tam Ðảo Hotels, Vietnam (From $19)
+title = Tam Ðảo - Hotels in Vietnam - Booking.com's
 url = https://www.booking.com/city/vn/tam-dao.html
 
 [spie.org]
