CI images update

--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-08-10 04:53:05
+lastsearch = 2024-08-10 06:27:09
 
 [shopee.vn]
 match = 0.0%%
@@ -172,9 +172,9 @@ title = 25//06 VỀ HÀNG. CHIẾU ĐIỀU HOÀ MÁT LẠNH COCO 1.6 ...
 url = https://phatdatbinhthoi.com.vn/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-16-x-2-m-11506.htm
 
 [www.facebook.com]
-match = 70.8%%
-title = Chiếu Điều Hòa Cao Su Non
-url = https://www.facebook.com/groups/753270865357544/
+match = -50.0%%
+title = Chiếu Điều Hoà Cao Su... - Baby's world - Trọn gói sơ sinh
+url = https://www.facebook.com/Mevabehoian/posts/chiếu-điều-hoà-cao-su-non-tặng-kèm-gối-cho-bé-in-hình-5d-đáng-yêu-chiếu-điều-hoà/426989793167259/
 
 [www.bettybedding.vn]
 match = 12.5%%
