--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-10 01:51:23
+lastsearch = 2024-08-10 06:14:24
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoqEDxulnnGy4V-9EOzK_uTQ9h4GxPt5JbQ_RlMTuH-PDfLiEDI5
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [goni.vn]
 match = 14.8%%
@@ -17,9 +17,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = -33.3%%
-title = Chiếu điều hòa cao su non Latex Thái Lan M2T BEDDING ...
-url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-Latex-Thái-Lan-M2T-BEDDING-mềm-mịn-mát-thấm-hút-mồ-hôi-tốt-i.64675099.22244612519
+match = -25.9%%
+title = Chiếu điều hòa cho bé, chiếu mây điều hòa thoáng khí ...
+url = https://shopee.vn/Chiếu-điều-hòa-cho-bé-chiếu-mây-điều-hòa-thoáng-khí-không-bị-ẩm-mốc-cho-bé-ngủ-ngon-i.1042428909.23660866233
 
 [foreverbedding.net]
 match = 0.0%%
@@ -84,7 +84,7 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOoph18r_BeCo4M5fmHYi4jBOVHc8bHaiMrsPeneoxrzbqDXjp05v
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
 
 [chieutrelinhchi.com]
 match = 0.0%%
