--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-10 05:38:33
+lastsearch = 2024-08-10 06:27:47
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -222,9 +222,9 @@ title = Chào Mừng Quý Vị Đến Hoa Kỳ
 url = https://www.uscis.gov/sites/default/files/document/guides/M-618_v.pdf
 
 [shopee.vn]
-match = 25.0%%
-title = Chiếu lác màu xuất khấu
-url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
+match = -156.2%%
+title = Cách tăng chiều cao tuổi 14 hiệu quả không nên bỏ qua
+url = https://shopee.vn/blog/tang-chieu-cao-tuoi-14/
 
 [momo.vn]
 match = -56.2%%
