--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-10 01:40:17
+lastsearch = 2024-08-10 06:17:29
 
 [www.lazada.vn]
 match = -94.4%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -94.4%%
-title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
-url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
+match = -144.4%%
+title = Hoa Quả Ưu Đàm - NEM CHUA RÁN HUTA cho các tín đồ ...
+url = https://www.facebook.com/hoaquauudam/posts/nem-chua-rán-huta-cho-các-tín-đồ-ăn-vặt-55k-1-hộp-400gr-15-cái-nem-em-đặt-thì-nh/750337347135350/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -138.9%%
-title = Buffet nem nướng 39k và nước mía khổng lồ 15k full ...
-url = https://www.tiktok.com/@50motbua/video/7367416773156539664
+match = 27.8%%
+title = Nem Nuong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-air-fryer?lang=en
 
 [vi.wikipedia.org]
 match = -27.8%%
