--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-10 03:53:57
+lastsearch = 2024-08-10 06:22:48
 
 [ninhouse.vn]
 match = -146.2%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOoro6Wvl70KjTve9_Q1XPi9zTlWeRcVFDqsLt-N49jEKw5cQz7EB
 
 [www.lamido.vn]
 match = 46.2%%
@@ -92,9 +92,9 @@ title = Vỏ gối ôm Sông Hồng 38x100cm vải 100%% cotton
 url = https://songhong.info/vo-goi-om-song-hong-38x100-cotton
 
 [www.lazada.vn]
-match = -284.6%%
-title = Gối nằm, gối ngủ, gối kẻ, gối hơi gồm cả ruột gối và vỏ áo ...
-url = https://www.lazada.vn/products/goi-nam-goi-ngu-goi-ke-goi-hoi-gom-ca-ruot-goi-va-vo-ao-goi-loai-to-danh-cho-nguoi-lon-50-x70cm-cac-mau-ke-vai-cotton-han-quoc-i1568863340.html
+match = -38.5%%
+title = Vỏ Gối Kẻ Tím Giá Tốt T04/2024
+url = https://www.lazada.vn/tag/vo-goi-ke-tim/?srsltid=AfmBOoqEZGRd1RTLA-Bw5zpqKK2IlfIwlLeU9b4o1zfgxKbw752VEdFl
 
 [flexhouse.vn]
 match = -207.7%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -238.5%%
 title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi
+url = https://jysk.vn/vo-goi?srsltid=AfmBOoo31tZ4rv8mGb5TqqHx7UWNIhOCz7OeGazBGnwq6khd6jsewGTv
 
 [www.everonvn.vn]
 match = 15.4%%
