CI images update

--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-10 04:54:25
+lastsearch = 2024-08-10 06:43:51
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -57,9 +57,9 @@ title = GA CHUN TRẦN CÓ BÈO PHỦ NGẮN siêu đẹp - Ga gối nỉ ...
 url = https://shopee.vn/Bộ-GA-GỐI-NỈ-NHUNG-TRẦN-BÔNG-GA-NỈ-PHỦ-TRẦN-BÔNG-GA-CHUN-TRẦN-CÓ-BÈO-PHỦ-NGẮN-siêu-đẹp-Ga-gối-nỉ-nhung-cao-cấp-i.11781398.17889810969
 
 [runa.vn]
-match = -23.8%%
-title = Bộ Chăn Ga Gối Satin Cotton Màu Chocolate
-url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-beige
+match = -4.8%%
+title = Bộ Chăn Ga Gối Satin Cotton Màu Wheat
+url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-wheat
 
 [hoangkimhome.com]
 match = -90.5%%
