--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-10 03:56:47
+lastsearch = 2024-08-10 06:41:52
 
 [burningman.org]
 match = -60.0%%
@@ -1107,9 +1107,9 @@ title = CITY OF KANSAS CITY | OFFICIAL WEBSITE | Home
 url = https://www.kcmo.gov/
 
 [www.wisn.com]
-match = -200.0%%
-title = Milwaukee News, Weather and Sports - Wisconsin News ...
-url = https://www.wisn.com/
+match = 0.0%%
+title = 
+url = https://www.wisn.com/article/contact-us/3618491
 
 [www.fca.org.uk]
 match = 0.0%%
