--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-10 05:00:44
+lastsearch = 2024-08-10 06:37:23
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [shopee.vn]
-match = -105.0%%
-title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường xếp
+match = -95.0%%
+title = Bộ Drap 4 món Ga giường thun lạnh HQ [ NỆM CAO 15- ...
+url = https://shopee.vn/Bộ-Drap-4-món-Ga-giường-thun-lạnh-HQ-NỆM-CAO-15-25CM-gồm-1-ga-2-vỏ-nằm-1-vỏ-ôm-i.177151023.20208763729
 
 [sofatoanquoc.com]
 match = 30.0%%
@@ -275,4 +275,9 @@ url = https://vuanem.com/blog/kich-thuoc-giuong-ngu-vo-chong.html
 match = -5.0%%
 title = Bộ Drap Ga Trải Giường Modal - 07
 url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-07/
+
+[hoaphathcm.vn]
+match = -105.0%%
+title = Giường Bố Xếp | Giường Ngủ Xếp Gọn Bằng Vải Bố Giá Rẻ
+url = https://hoaphathcm.vn/san-pham/giuong-bo-xep-796.html
 
