--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-10 05:47:41
+lastsearch = 2024-08-10 06:39:07
 
 [everon.online]
 match = -55.6%%
@@ -17,9 +17,9 @@ title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
 url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
 
 [tongdailyeveron.com.vn]
-match = 29.6%%
-title = Bộ ga phủ 180*200 EPM 20069
-url = https://tongdailyeveron.com.vn/products/bo-ga-phu-180-200-epm20069
+match = -5.3%%
+title = Bộ Chăn Ga Giảm Giá
+url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 
 [demxanh.com]
 match = -7.4%%
@@ -27,9 +27,9 @@ title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
 url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
-match = 18.5%%
-title = Bộ Chăn ga gối Everon EPM-21067
-url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
+match = 22.2%%
+title = Bộ chăn ga gối Everon EPM-21070
+url = https://everonhanquoc.vn/everon/12768/bo-chan-ga-goi-everon-epm-21070
 
 [everonhn.com.vn]
 match = 33.3%%
@@ -42,9 +42,9 @@ title = Bộ Everon Epm-21070
 url = https://everon.net.vn/everon/2131/bo-everon-epm-21070
 
 [sieuthidemhanquoc.com.vn]
-match = 18.5%%
-title = Bộ chăn ga gối Everon EPT-21044
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-ept-21044-1528
+match = 22.2%%
+title = Bộ chăn ga gối Everon EPM-21060
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
 
 [shopee.vn]
 match = -70.4%%
