--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-10 06:01:11
+lastsearch = 2024-08-10 06:30:29
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -82,9 +82,9 @@ title = bộ chăn ga gối sông hồng doremon d16 015 giá tốt Tháng ...
 url = https://shopee.vn/search?keyword=bộ chăn ga gối sông hồng doremon d16 015
 
 [demxanh.com]
-match = -25.0%%
-title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/chan-ga-goi-dem.html
+match = 20.8%%
+title = Chăn ga gối cotton Notag 4 món 16
+url = https://demxanh.com/chan-ga-goi-cotton-notag-4-mon-16.html
 
 [changagoibenlinda.com]
 match = -12.5%%
