--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-10 05:40:15
+lastsearch = 2024-08-10 06:35:22
 
 [demxanh.com]
 match = -60.9%%
 title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOoq1sxEkAm1CxaRJi0fukMEFTYHyscwf3kU0g-mArXqQ_Mh4_j6u
 
 [www.lazada.vn]
 match = 47.8%%
 title = Chiếu Trúc cao bằng 1.4 X 1.95
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html?srsltid=AfmBOorvTxROr3gEqtJxU4i1dHBGRPlRTHoVizZVlwYFVopKw66DvJmW
 
 [shopee.vn]
-match = -73.9%%
-title = Chiếu trúc Cao Bằng loại một, có 5 loại kích thước 1,2m ...
-url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-loại-một-có-5-loại-kích-thước-1-2m-1m-0.9mvà-0.8m-i.17414239.2656259371
+match = 43.5%%
+title = Chiếu trúc cao bằng 1.4m x 1.95
+url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
 
 [lombom.com]
 match = -60.9%%
@@ -29,12 +29,12 @@ url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOoooKCRVAFkjyMKA9e6WpsVN8X5ROFiMmdL1qR7I0SndQjstHj2S
 
 [chieutrucsaigon.com]
-match = -13.0%%
-title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
+match = -17.4%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [khodem.vn]
 match = -56.5%%
