--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -12,9 +12,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [shopee.vn]
-match = -3.6%%
-title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
-url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
+match = 7.1%%
+title = Chiếu Trúc Hạt Mắt Trắng Quế Lâm (Mắt nhỏ Loại 1)
+url = https://shopee.vn/Chiếu-Trúc-Hạt-Mắt-Trắng-Quế-Lâm-(Mắt-nhỏ-Loại-1)-i.22156385.939014750
 
 [chieutrelanlan.com]
 match = 25.0%%
