--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-10 05:28:55
+lastsearch = 2024-08-10 06:28:00
 
 [demxanh.com]
-match = 37.0%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoqFRmwRKqYU74VObTDfK4BkkuJGlnc038C4IvIUmaXtQ3zxa9Fh
+match = 25.9%%
+title = Chiếu trúc tăm rồng loại gập giá rẻ
+url = https://demxanh.com/chieu-truc-tam-rong-loai-gap.html
 
 [demre.com.vn]
 match = 66.7%%
 title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -42,9 +42,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Chiếu trúc trung quốc
-url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html?srsltid=AfmBOoqhl7ffyHY5Rl6NiCdlUE0nyVqXDBPYWfEQ6seh6HtlMDw7awmW
+match = 55.6%%
+title = Chiếu trúc Thái đen 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 
 [shopee.vn]
 match = -18.5%%
