--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-10 05:49:26
+lastsearch = 2024-08-10 06:35:01
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -47,9 +47,9 @@ title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
 url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [www.diepxuan.com]
-match = 58.7%%
-title = Nệm lò xo Everon Pocket 180x200x25 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-180x200x25.html
+match = 55.3%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27 - Điệp Xuân
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [everon.online]
 match = 31.9%%
@@ -80,4 +80,9 @@ url = https://everonhanquoc.vn/1030/dem-lo-xo-everon
 match = 26.3%%
 title = Đệm lò xo Kingkoil Cloud Firm - Everon
 url = https://everonchinhhang.vn/products/dem-lo-xo-kingkoil-cloud-firm
+
+[www.everonvni.vn]
+match = 31.9%%
+title = Đệm Lò Xo KingKoil Clod Firm - everon 37 hòa mã
+url = https://www.everonvni.vn/kingkoil-clodfirm/
 
