--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-10 05:48:40
+lastsearch = 2024-08-10 06:38:25
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,19 +17,19 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -116.7%%
-title = LU EATING | MỘT GÓC NEM CHUA RÁN XINH XẺO GIỮA ...
-url = https://www.instagram.com/p/CltHti5L66x/
+match = -138.9%%
+title = Ăn-bởi-Long | [NEM NƯỚNG, CÁ BÒ, PHÔ MAI QUE CHỊ ...
+url = https://www.instagram.com/p/Bb9uTnaBRoV/
 
 [www.facebook.com]
-match = 22.2%%
-title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
-url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
+match = -5.6%%
+title = Nem Chua thanh hóa siêu ngon
+url = https://www.facebook.com/groups/2016158875286916/posts/-nem-chua-thanh-hóa-siêu-ngon-em-về-hàng-loại-1-chỉ-20k-10-chiếc-trời-nắng-nóng-/3835702263332559/
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -144.4%%
+title = Chắc nhiều bạn đã nghe đến Nem Chua chị Hạnh. Phải ...
+url = https://www.tiktok.com/@ngdangdung/video/7237496309215726853
 
 [www.youtube.com]
 match = -122.2%%
