--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-08-10 03:52:55
+lastsearch = 2024-08-10 06:38:46
 
 [shope.io.vn]
 match = -59.3%%
@@ -14,7 +14,7 @@ url = https://shope.io.vn/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-ho
 [www.diepxuan.com]
 match = 3.7%%
 title = Ruột gối kê Everon 45x65 Thin - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thin.html
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thin.html?srsltid=AfmBOooMQ70phsWSL23CMi0w9nG389dN0MKPLQdiKlqf33yrcdUhmM8K
 
 [giasale.com]
 match = -59.3%%
