--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-10 04:17:28
+lastsearch = 2024-08-10 06:38:04
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -32,9 +32,9 @@ title = Kings of Convenience- KOC - Zenész/együttes
 url = https://www.facebook.com/kingsofconvenience/?locale=hu_HU
 
 [www.cia.gov]
-match = -65.2%%
-title = THE KOREAN LABOR PARTY AND THE KIM IL-SONG ...
-url = https://www.cia.gov/readingroom/document/cia-rdp80t00246a064800250001-5
+match = -82.6%%
+title = N. KOREAN PATROL BOATS SEIZE U.S. SPY SHIP WITH ...
+url = https://www.cia.gov/readingroom/document/06638269
 
 [journal.transformativeworks.org]
 match = -91.3%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -113.0%%
-title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
-url = https://en.yna.co.kr/view/AEN20180218002800320
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.usmcu.edu]
 match = -104.3%%
