--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-08-10 05:33:34
+lastsearch = 2024-08-10 06:39:48
 
 [www.diepxuan.com]
-match = 5.3%%
-title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOooa7ff1EWua7mkIu0w7E8uj4Ajk_oX13bNWkoT98C5oR7LJJ_Po
+match = -20.8%%
+title = Điệp Xuân Chiếu trúc Quế Lâm I 180x200
+url = https://www.diepxuan.com/chieu-truc-que-lam-i-180x200.html
 
 [www.tui.co.uk]
 match = -10.5%%
