CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -367,9 +367,9 @@ title = Network - HDBank
 url = https://partner.hdbank.com.vn/Default.aspx?ArticleId=b9b9f686-49e9-46bc-b409-5b51ef55ea01
 
 [shinhan.com.vn]
-match = -7.7%%
-title = BACH HOA XANH
-url = https://shinhan.com.vn/public/uploads/card/DEBIT_2024/SHINHAN ZONE/BACH HOA XANH - EN_compressed.pdf
+match = -66.7%%
+title = promotion
+url = https://shinhan.com.vn/public/uploads/card/DEBIT_2024/SHINHAN ZONE/AN KHANG - EN.pdf
 
 [issuu.com]
 match = -118.8%%
@@ -425,4 +425,19 @@ url = https://dichvucong.bocongan.gov.vn/
 match = -50.0%%
 title = CÔNG TY CỔ PHẦN CẤP NƯỚC CHỢ LỚN
 url = https://capnuoccholon.com.vn/
+
+[fact-link.com.vn]
+match = -168.8%%
+title = FACT-LINK : : Japan - Vietnam Industrial Directory
+url = https://fact-link.com.vn/contact_supplier.php?pid=209
+
+[www.tripadvisor.co.za]
+match = -162.5%%
+title = HCMC shopping - Vietnam Message Board - Tripadvisor
+url = https://www.tripadvisor.co.za/ShowTopic-g293921-i8432-k1323310-HCMC_shopping-Vietnam.html
+
+[www.arental.vn]
+match = -206.2%%
+title = Social isurance addresses of districts in Ho Chi Minh City
+url = https://www.arental.vn/en/social-isurance-addresses-of-districts-in-ho-chi-minh-city-bv245
 
