--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-09 21:43:30
+lastsearch = 2024-08-10 06:56:33
 
 [everon.online]
 match = 15.4%%
@@ -29,12 +29,12 @@ url = http://www.changagoidemeveron.vn/3/everon/chan-bon-mua-everon-lite-eve-01.
 [www.everonvni.vn]
 match = 30.8%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOopZpB1DMcVnWpdn_FXeflA7_9gjtz-pTpixxpDIW-QgALzdf6vM
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [www.tiktok.com]
-match = -53.8%%
-title = Quán gà chỉ Bốn mùa ngon nhất Quy Nhơn nhất định phải ...
-url = https://www.tiktok.com/@cuongkhii/video/7250838547173870853
+match = -88.5%%
+title = Giải mã câu hỏi : “Nếu em biến thành con gián anh có yêu em ...
+url = https://www.tiktok.com/@hoanhathuynhofficial/video/7296063927673195777?lang=en
 
 [books.google.com]
 match = -103.8%%
@@ -72,9 +72,9 @@ title = Fuji Master
 url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = -50.0%%
-title = Tiết kiệm đến 75%% khi mua Anno 2070™ trên Steam
-url = https://store.steampowered.com/app/48240?l=vietnamese&curator_clanid=33358846
+match = -76.9%%
+title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
+url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=38262110&curator_listid=67239&snr=1_1056_1055_1056
 
 [vi.wikipedia.org]
 match = -3.8%%
@@ -163,8 +163,8 @@ url = https://www.tanhkhong.org/p1185a1901/4/dd0210-nhu-chieu-
 
 [enews.agu.edu.vn]
 match = 16.0%%
-title = Bâng khuâng chiều nội trú
-url = https://enews.agu.edu.vn/index.php?option=com_content&view=article&id=13283&Itemid=126
+title = Còn mãi kỷ niệm ở nơi đây
+url = https://enews.agu.edu.vn/index.php?option=com_content&view=article&id=23439&Itemid=122
 
 [watv.org]
 match = -76.9%%
