--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-10 06:26:46
+lastsearch = 2024-08-10 06:58:00
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -98,8 +98,8 @@ url = https://www.yellowpages.vn/cls/141160/do-da-san-xuat-va-phan-phoi.html
 
 [dungcuykhoabinhminh.com]
 match = -31.2%%
-title = Y Khoa Bình Minh
-url = https://dungcuykhoabinhminh.com/
+title = Kết quả tìm kiếm
+url = https://dungcuykhoabinhminh.com/tim-kiem.html?key=
 
 [stableprogram.org]
 match = 26.1%%
