--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-08-10 06:25:40
+lastsearch = 2024-08-10 06:51:42
 
 [www.youtube.com]
 match = -52.0%%
@@ -44,7 +44,7 @@ url = https://trithucvn.co/the-gioi/bo-ngoai-giao-my-va-dai-loan-phan-ung-ve-tuy
 [books.google.com]
 match = -96.0%%
 title = Địa chí Tiền Giang - Volume 2 - Page 921 - Google Books Result
-url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=jtZNBwrGLh&sig=ACfU3U3CUjo1KeZzInhZmiOpBpywJFrX6Q&hl=en&sa=X&ved=2ahUKEwjtjauxh-mHAxXSF1kFHXYTE5cQ6AF6BAgZEAM
+url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=jtZNBwtCHi&sig=ACfU3U2odnrZyipnzis7l83XLgo7oiTomQ&hl=en&sa=X&ved=2ahUKEwji5vCZjemHAxXsLzQIHXc7CF8Q6AF6BAgjEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
