--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-10 04:28:14
+lastsearch = 2024-08-10 06:47:48
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -575,4 +575,9 @@ url = https://thoibaonganhang.vn/sap-dien-ra-chuong-trinh-nghe-thuat-ban-hung-ca
 match = -37.5%%
 title = Giao hàng nhanh Hồ Chí Minh
 url = https://viettelpost.com.vn/tin-tuc/giao-hang-nhanh-ho-chi-minh/
+
+[vba.vn]
+match = -81.2%%
+title = GIẢI BÓNG RỔ CHUYÊN NGHIỆP VIỆT NAM
+url = https://vba.vn/clubs/saigon-heat
 
