--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-10 05:41:53
+lastsearch = 2024-08-10 06:52:26
 
 [www.lazada.vn]
 match = -27.8%%
@@ -390,4 +390,9 @@ url = https://online.mmvietnam.com/san-pham/mm-rach-gia/vo-goi-ngoc-hanh-50x70cm
 match = -38.5%%
 title = ndmp-2019.pdf
 url = https://ndma.gov.in/sites/default/files/PDF/ndmp-2019.pdf
+
+[sieuthidem.vn]
+match = -161.1%%
+title = Những mẫu áo gối 50 x 70 đẹp, độc và lạ cho tổ ấm của ...
+url = https://sieuthidem.vn/nhung-mau-ao-goi-50-x-70-dep-doc-va-la-cho-to-am-cua-gia-dinh/
 
