CI images update

--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-10 04:32:12
+lastsearch = 2024-08-10 08:07:47
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,12 +24,12 @@ url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoriwrzjkUWVceVsnMyNS8mtQG1HbMafbXBp7izNcpphhaVEMea_
 
 [www.lazada.vn]
 match = -85.7%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOopFsBBYfBzLP6G6nRAI8I46s6zfrr54Jg49nQ8J4bhUJ9HrBT4B
 
 [chieutruc.info]
 match = -71.4%%
