--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-10 06:48:09
+lastsearch = 2024-08-10 08:12:37
 
 [demxanh.com]
 match = -60.9%%
 title = Chăn lông cừu là gì? Nên chọn loại chăn lông cừu nào?
-url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html?srsltid=AfmBOoozBqm_a0wtlNg8JNR6yoATriFpZVwZ7VqrcgDUBU1DVI5nsJMs
+url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 26.1%%
 title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html?srsltid=AfmBOopHiT3h5r2XxBPtxTKVj9SugNnvhVqWDnT5vkb1csq0Suack2o1
+url = https://www.diepxuan.com/chan-kq-song-5kg.html
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOooFUN-3n2mCLPDcb957R6zjKkLKN9ncku9c46IDaxuZ2wmpvV9D
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
 match = -56.5%%
