--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-10 06:58:00
+lastsearch = 2024-08-10 08:08:29
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -109,7 +109,7 @@ url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual 
 [drhc-cosmetics.com]
 match = -60.7%%
 title = DR.HC All-Natural Skincare Face Soap - Goat Milk Orange ...
-url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
+url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18?srsltid=AfmBOoqZoz-XWq0X0s9qvlKLcQz0sJ_ubWo0UxhJyDa6hc_K6MZ-mb1j
 
 [quangduc.com]
 match = -42.9%%
@@ -152,9 +152,9 @@ title = Hành trình thai giáo 280 ngày by Nguyễn Huy Hoàng
 url = https://issuu.com/huyhoangytn/docs/hs2a_hanh-trinh-thai-giao-280-ngay
 
 [m.facebook.com]
-match = -35.7%%
-title = Chiều nay em co 30kg ghẹ xanh to chăc mẩy ủ đá tươi ...
-url = https://m.facebook.com/groups/2393083487434360/posts/7839014392841215/
+match = -21.4%%
+title = NGỌC NGA store -Mỹ PHẨM NHẬT KIM ANH- 台灣
+url = https://m.facebook.com/p/NGỌC-NGA-store-Mỹ-PHẨM-NHẬT-KIM-ANH-台灣-100085169254296/
 
 [dabanhmat.com]
 match = -28.6%%
@@ -177,9 +177,9 @@ title = TP. Đào Viên · XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN - Coda
 url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
 
 [abina.vn]
-match = -75.0%%
-title = Viên uống Xtend-Life NR6: tăng sinh NAD tự nhiên, chống lão ...
-url = https://abina.vn/xtend-life-nr6-tang-sinh-nad-tu-nhien-tang-cuong-tuoi-tho/
+match = -57.1%%
+title = Bột làm 1kg sữa chua Hy Lạp vị mật ong manuka Easiyo - Abina
+url = https://abina.vn/sua-chua-hy-lap-mat-ong-manuka-easiyo-manuka-honey/
 
 [kinhtexaydung.gov.vn]
 match = -21.4%%
