--- a/images/chieu-dieu-hoa-lua-120x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-120x190.html
 lastopen = 2024-08-08 20:39:18
 
 [search]
-lastsearch = 2024-08-10 04:46:28
+lastsearch = 2024-08-10 07:59:27
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoobrYxXhQryF_ZZpLe-uSMiMgSJSYc63fseeBrbsYNpudJwveZr
 
 [thegioidemviet.vn]
 match = -19.2%%
@@ -19,7 +19,7 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-lua/
 [thegioidemonline.com]
 match = 34.6%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
+url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html?srsltid=AfmBOorZ8h8AyRkfX8bHYIUTrQR7DZjaKiiZEnTXrRS7dsbo2QiUFMeG
 
 [shopee.vn]
 match = 53.8%%
@@ -69,5 +69,5 @@ url = https://thegioidemtot.vn/434-chieu-dieu-hoa.html
 [www.diepxuan.com]
 match = 42.3%%
 title = Chiếu điều hòa mây 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-may-120x190.html
+url = https://www.diepxuan.com/chieu-dieu-hoa-may-120x190.html?srsltid=AfmBOoqBvEkRpV94oevQDxNhBBupeUtcWwMc9jaV9yIuyteSFR1IPxLu
 
