--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-10 03:00:13
+lastsearch = 2024-08-10 07:59:48
 
 [helloviettravel.com]
 match = -187.5%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -156.2%%
-title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
-url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
+match = -193.8%%
+title = TOP 40 địa điểm du lịch Việt Nam nổi tiếng và hấp dẫn nhất
+url = https://vinpearl.com/vi/40-dia-diem-du-lich-viet-nam-noi-tieng-nhat-dinh-nen-den-mot-lan
 
 [thegioixecau.vn]
 match = -150.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -143.8%%
-title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
-url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
+match = 12.5%%
+title = Bản tin Du lịch 18/7/2024
+url = https://www.youtube.com/watch?v=JPdEyoI0u4Y
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -144,7 +144,7 @@ url = https://thoibaotaichinhvietnam.vn/ha-noi-6-thang-dau-nam-tong-thu-tu-khach
 [bvhttdl.gov.vn]
 match = -187.5%%
 title = Điểm báo hoạt động ngành Văn hóa, Thể thao và Du lịch ...
-url = https://bvhttdl.gov.vn/diem-bao-hoat-dong-nganh-van-hoa-the-thao-va-du-lich-ngay-18-7-2024-20240718112006752.htm
+url = https://bvhttdl.gov.vn/diem-bao-hoat-dong-nganh-van-hoa-the-thao-va-du-lich-ngay-18-6-2024-20240618081335983.htm
 
 [baolaocai.vn]
 match = 0.0%%
