--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-10 04:52:25
+lastsearch = 2024-08-10 08:12:18
 
 [batdongsan.com.vn]
 match = -180.0%%
@@ -417,9 +417,9 @@ title = Xe buýt đến sân bay Nội Bài gồm những tuyến xe nào, lộ 
 url = https://mt.gov.vn/tk/tin-tuc/55347/xe-buyt-den-san-bay-noi-bai-gom-nhung-tuyen-xe-nao--lo-trinh-ra-sao.aspx
 
 [vksndtc.gov.vn]
-match = -246.7%%
-title = Lễ trao giải toàn đoàn và tổng kết Hội thao ngành Kiểm ...
-url = https://vksndtc.gov.vn/tin-hoat-dong-vksnd-toi-cao/le-trao-giai-toan-doan-va-tong-ket-hoi-thao-nganh--d2-t12364.html
+match = -206.7%%
+title = VKSND tỉnh Thừa Thiên Huế triển khai công tác tuyên ...
+url = https://vksndtc.gov.vn/tin-hoat-dong-vksnd-toi-cao/vksnd-tinh-thua-thien-hue-trien-khai-cong-tac-tuye-d2-t12386.html
 
 [www.baodongthap.vn]
 match = -233.3%%
@@ -500,4 +500,14 @@ url = https://baochinhphu.vn/de-xuat-noi-dung-bai-kiem-tra-de-duoc-phuc-hoi-diem
 match = -246.7%%
 title = TP Hà Nội: Quận Ba Đình thí điểm trông giữ xe không dùng ...
 url = https://baotainguyenmoitruong.vn/tp-ha-noi-quan-ba-dinh-thi-diem-trong-giu-xe-khong-dung-tien-mat-377988.html
+
+[baolamdong.vn]
+match = -213.3%%
+title = Lâm Đồng đứng thứ 3 toàn đoàn Hội thi Tin học trẻ ...
+url = https://baolamdong.vn/ban-tre/202408/lam-dong-dung-thu-3-toan-doan-hoi-thi-tin-hoc-tre-toan-quoc-nam-2024-0521e24/
+
+[hotro.hasaki.vn]
+match = -20.0%%
+title = Vận chuyển 2H tại Hasaki
+url = https://hotro.hasaki.vn/van-chuyen-2h.html
 
