--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-08-10 05:38:12
+lastsearch = 2024-08-10 08:02:13
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Màn tự bung dinh vuong18
 url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 
 [www.mungbaobao.com]
-match = -41.7%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m - Loại 2 (Không Viền ...
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-rong-1m8-x-2m-bao-bao.html
+match = 20.8%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -54.2%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = -29.2%%
+title = màn chụp vuông giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -27,9 +27,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.mantubung.com]
-match = -8.3%%
-title = 1 CỬA - Mùng tự bung ĐỈNH VUÔNG 1m8 x 2m - Loại 2
-url = https://www.mantubung.com/mung-tu-bung-dinh-rong-loai-thuong-1m8-x-2m28007.html
+match = -12.5%%
+title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
+url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 
 [www.lazada.vn]
 match = 25.0%%
