--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-10 05:28:15
+lastsearch = 2024-08-10 09:10:07
 
 [www.dem365.vn]
 match = -61.9%%
@@ -39,7 +39,7 @@ url = https://www.youtube.com/watch?v=ZjibqQJbDZY
 [www.lazada.vn]
 match = -33.3%%
 title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
+url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/?srsltid=AfmBOopJrZYL4tNyYnph3Yhl6HEEwK9Zjvu0EacPX7P1lhrGbyjwjUxu
 
 [docauquanghuy.com]
 match = -33.3%%
