--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-10 06:59:03
+lastsearch = 2024-08-10 09:07:16
 
 [hoa18.com]
 match = -126.3%%
@@ -19,7 +19,7 @@ url = https://www.youtube.com/watch?v=NPdIFgtFTso
 [kallos.co]
 match = -105.3%%
 title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
-url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
+url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua?srsltid=AfmBOopBAaSOFR-iD-wUReCl37HBLUWSaUuRQmwkn7Jq5b-UTrhfGolX
 
 [www.facebook.com]
 match = -52.6%%
