--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-08-10 05:34:16
+lastsearch = 2024-08-10 09:09:46
 
 [demxanh.com]
 match = -3.3%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOorkF9qkzkqogOca9fOezgG6Vpz96622EHcnATZ6RQ4M24FVJQFx
 
 [shopee.vn]
-match = 0.0%%
-title = gối điều hoà giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=gối điều hoà
+match = 10.0%%
+title = CHIẾU ĐIỀU HÒA SỢI MẤY LÓT LỤA CAO CẤP HÀNG ...
+url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-SỢI-MẤY-LÓT-LỤA-CAO-CẤP-HÀNG-LOẠI-1-i.914808892.24557268713
 
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOorE8ejh0-_NmZvMHPrE_ZaNmKMkMpS7alNTw4cSb5mNlVz8OAhH
 
 [tiki.vn]
 match = 40.0%%
