--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-10 03:17:00
+lastsearch = 2024-08-10 09:11:30
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -29,12 +29,12 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 [demxanh.com]
 match = -76.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqcWh1bzHJcp7KASBEj-V8Ykl5KCPA1fD8RH60_lqm-kgIYQEb6
 
 [vongxepsaigon.vn]
-match = -123.8%%
-title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-160cm/
+match = -76.2%%
+title = Chiếu trúc chiếu tre 120cm hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-120cm-hat-nau-den-hang-tot-loai-1/
 
 [thegioichieutruc.com]
 match = -47.6%%
