--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-10 08:13:21
+lastsearch = 2024-08-10 09:48:44
 
 [www.instagram.com]
-match = -238.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
-match = 23.1%%
-title = Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -62,9 +62,9 @@ title = Centre for Learning Enhancement And Research :: About
 url = https://www.cuhk.edu.hk/clear/about/people.html
 
 [en.wikipedia.org]
-match = -333.3%%
-title = 3X1
-url = https://en.wikipedia.org/wiki/3X1
+match = -30.8%%
+title = My Date with a Vampire
+url = https://en.wikipedia.org/wiki/My_Date_with_a_Vampire
 
 [nursing.hku.hk]
 match = -161.5%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -300.0%%
-title = Hoi Chan Translates Everyday Experiences into ... - Colossal
+match = -215.4%%
+title = Hoi Chan Translates Everyday Experiences into ...
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
