--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-08-10 08:13:00
+lastsearch = 2024-08-10 09:53:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -126.7%%
+title = Tuổi trẻ Đà Nẵng adicionou uma foto nova.
+url = https://www.facebook.com/photo.php?fbid=470885098406144&id=100064539736066&set=a.457776343050353&locale=pt_PT
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -530,4 +530,9 @@ url = https://tuyensinh247.com/bai-tap-355803.html
 match = 14.3%%
 title = Cơ cấu tổ chức
 url = https://vinafood2.com.vn/featured_item/co-cau-to-chuc/
+
+[vksndtc.gov.vn]
+match = -206.7%%
+title = VKSND tỉnh Thừa Thiên Huế triển khai công tác tuyên ...
+url = https://vksndtc.gov.vn/tin-hoat-dong-vksnd-toi-cao/vksnd-tinh-thua-thien-hue-trien-khai-cong-tac-tuye-d2-t12386.html
 
