--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-10 06:24:57
+lastsearch = 2024-08-10 09:49:26
 
 [demxanh.com]
 match = 42.4%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOope2viTQ6Z0Yy1YWNilTSGt-XEyRY7ney1XHRB8s5sao8xMT8ym
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.diepxuan.com]
 match = 100.0%%
