--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-10 05:55:18
+lastsearch = 2024-08-10 10:01:50
 
 [screenrant.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Green card
 url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = 0.0%%
-title = Green Book (2018)
-url = https://www.imdb.com/title/tt6966692/
+match = -7.1%%
+title = The Green Mile (1999)
+url = https://www.imdb.com/title/tt0120689/
 
 [www.boundless.com]
 match = -128.6%%
