--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-08-10 00:44:55
+lastsearch = 2024-08-10 09:57:04
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -205,4 +205,9 @@ url = https://www.roswellpark.org/cancertalk/202307/acupressure-self-care-home
 match = -140.0%%
 title = Unemployment benefits | USAGov
 url = https://www.usa.gov/unemployment-benefits
+
+[immunization.dph.ncdhhs.gov]
+match = -110.0%%
+title = K-12 School Requirements
+url = https://immunization.dph.ncdhhs.gov/schools/k-12.htm
 
