--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-10 04:51:00
+lastsearch = 2024-08-10 09:46:17
 
 [shopee.vn]
-match = -8.0%%
-title = Màn chụp Tự Bung Đỉnh Vuông Cao Cấp Hoàng Nhân ...
-url = https://shopee.vn/Màn-chụp-Tự-Bung-Đỉnh-Vuông-Cao-Cấp-Hoàng-Nhân-Màn-Rộng-Dãi-Mắt-Nhỏ-Chống-Muỗi-II-BẢO-HÀNH-1-năm-i.397469085.9220637014
+match = -12.0%%
+title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -24.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [www.mungbaobao.com]
 match = -28.0%%
@@ -57,9 +57,9 @@ title = Cách sử dụng màn chụp tự bung cao cấp
 url = https://demxanh.com/cach-su-dung-man-chup-tu-bung-cao-cap.html
 
 [www.facebook.com]
-match = -40.0%%
-title = Cách sử dụng màn chụp tự bung 2 cửa đỉnh vuông cao cấp ...
-url = https://www.facebook.com/demxanhcom/videos/cách-sử-dụng-màn-chụp-tự-bung-2-cửa-đỉnh-vuông-cao-cấp/718813088661095/
+match = 28.0%%
+title = Màn Chụp Tự Bung Cao Cấp Bảo An
+url = https://www.facebook.com/p/Màn-Chụp-Tự-Bung-Cao-Cấp-Bảo-An-100065329096071/
 
 [vinamartvn.com]
 match = 44.0%%
@@ -67,9 +67,9 @@ title = Màn Chụp Tự Bung Đỉnh Vuông Cao Cấp -
 url = https://vinamartvn.com/mua/nha-cua-doi-song/man-chup-tu-bung-thong-minh-dinh-vuong-cao-cap/
 
 [www.youtube.com]
-match = -52.0%%
-title = Hướng Dẫn Gấp Màn Chụp Tự Bung - Cách Gấp Màn Chụp ...
-url = https://www.youtube.com/watch?v=AEddlekH6zA
+match = -24.0%%
+title = Cách Gấp Màn Chụp Tự Bung Đỉnh Vuông Cực Nhanh, Dễ ...
+url = https://www.youtube.com/watch?v=KLTM17ZrMag
 
 [demvip.vn]
 match = 52.0%%
