--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-10 05:45:16
+lastsearch = 2024-08-10 09:51:53
 
 [munghoangphat.com]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -36.0%%
-title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
-url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
+match = -12.0%%
+title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 8, 2024
+url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
 
 [www.mungbaobao.com]
 match = 48.0%%
