--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-10 00:41:03
+lastsearch = 2024-08-10 10:01:29
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -19.0%%
-title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
+match = 35.3%%
+title = Everhome - Hà Nội
+url = https://demxanh.com/khan-trai-ban-khach-san.html?sort=view&brand=6
 
 [www.ebay.com]
 match = -100.0%%
@@ -27,9 +27,9 @@ title = Vietnamese mixed script
 url = https://www.quora.com/What-are-some-examples-where-Vietnamese-was-written-in-mixed-Han-Latin-script
 
 [sieuthidemonline.vn]
-match = -85.7%%
-title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
-url = https://sieuthidemonline.vn/dem-cao-su-lavender/
+match = -61.9%%
+title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
+url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
 
 [thegioidemviet.vn]
 match = -119.0%%
@@ -52,9 +52,9 @@ title = Đệm Bông ép Everhome Vỏ TC
 url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 
 [demviethome.vn]
-match = -52.4%%
-title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/
+match = -57.1%%
+title = Đệm bông ép Everhome gấm xốp giá rẻ hà nội. ...
+url = https://demviethome.vn/dem-bong-ep-everhome-gam-xop/
 
 [www.tiktok.com]
 match = -95.2%%
@@ -185,4 +185,9 @@ url = https://www.cadl.org/lhonline/ICN1942-01-22.pdf
 match = -128.6%%
 title = Thông Điệp Cuộc Sống – Mang Những Kiến Thức Hay Về Cuộc ...
 url = https://thongdiepcuocsongblog.wordpress.com/
+
+[demthienkim.com]
+match = -128.6%%
+title = Đệm Thiên Kim - Nhà phân phối chăn ga gối đệm chính hãng!
+url = https://demthienkim.com/
 
