--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-10 06:21:22
+lastsearch = 2024-08-10 09:45:37
 
 [www.lazada.vn]
 match = -61.1%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = 27.8%%
-title = Nem Nuong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-air-fryer?lang=en
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -210,4 +210,9 @@ url = https://en.wikipedia.org/wiki/Nem_chua
 match = 0.0%%
 title = 
 url = https://www.labmanager.com/how-a-raw-pork-snack-could-help-us-keep-food-fresh-naturally-26023
+
+[www.seriouseats.com]
+match = 0.0%%
+title = 
+url = https://www.seriouseats.com/nem-chua-vietnamese-cured-pork
 
