CI images update

--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-08-10 09:57:04
+lastsearch = 2024-08-10 10:23:33
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -210,4 +210,9 @@ url = https://www.usa.gov/unemployment-benefits
 match = -110.0%%
 title = K-12 School Requirements
 url = https://immunization.dph.ncdhhs.gov/schools/k-12.htm
+
+[www.scottcountymn.gov]
+match = -210.0%%
+title = Scott County, MN | Official Website
+url = https://www.scottcountymn.gov/
 
