--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-10 05:21:19
+lastsearch = 2024-08-10 10:28:45
 
 [suongtuyet.com]
 match = 16.0%%
@@ -12,14 +12,14 @@ title = Nệm Bông Ép Tuấn Anh Korea Cotton
 url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông ép 3 mảnh Korea Gấm
-url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
+match = 8.0%%
+title = Đệm bông ép 3 mảnh Korea Kaki
+url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 
 [demxanh.com]
 match = -72.0%%
 title = Đệm bông ép Tuấn Anh chính hãng giá tốt nhất thị trường!
-url = https://demxanh.com/dem-bong-ep-tuan-anh.html?srsltid=AfmBOorJfQM_xvN7NPQSx1_dOF-psmtdAHoYV8GUCdCGRvj8t5P2hoS1
+url = https://demxanh.com/dem-bong-ep-tuan-anh.html
 
 [shopee.vn]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOorwI42QfAEyHQTwR7kLYbpxrFWNs8fZGkAycH-G4P7N-JG6uwOg
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [bedding.vn]
 match = -76.0%%
