--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-08-10 04:52:44
+lastsearch = 2024-08-10 10:30:07
 
 [dreamland.vn]
-match = 18.2%%
-title = Chăn ga gối đệm cao cấp Dreamland
-url = http://dreamland.vn/
+match = 7.5%%
+title = Dreamland chuyên chăn ga gối đệm cao cấp
+url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 [demluxury.com.vn]
 match = 31.6%%
 title = Bộ chăn ga gối Cotton MOC 03 Dreamland
-url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/?srsltid=AfmBOop47LB32UZvAzlBgeI6wAloN8es9q_PMZ5q9P1E3GdSq2D9ZyYF
+url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/?srsltid=AfmBOoqUIzx5sUhdxQiiHAl371b1g0_k1rgJH6de-2fTxmtUFLwYWmpR
 
 [www.facebook.com]
 match = -8.0%%
@@ -29,7 +29,7 @@ url = https://www.facebook.com/Dreamland.com.vn/
 [thegioidemonline.com]
 match = 62.8%%
 title = Bộ chăn ga gối Dreamland cotton lụa NK PT25
-url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-2-5.html?srsltid=AfmBOoqLeAOhDBHfOMDQUVn7Po9mLBXy6e0yGgtHEnXLUi1JilkTWNKn
+url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-2-5.html?srsltid=AfmBOorD8kPyt2-RkEmW5Am7RdWUpMs8rnOc8QdRLdfKOXO4_QMgD7O9
 
 [demdreamland.vn]
 match = 31.0%%
