--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-10 06:25:19
+lastsearch = 2024-08-10 10:31:51
 
 [shopee.vn]
-match = -152.6%%
-title = [Có sẵn] Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm ...
-url = https://shopee.vn/-Có-sẵn-Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.610736536.19889705939?publish_id=&sp_atk=af5df5ac-0fd0-4055-b8be-0e66d8e9614c&xptdk=af5df5ac-0fd0-4055-b8be-0e66d8e9614c
+match = -36.8%%
+title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -157.9%%
-title = ALIBABA - Bé Tú Anh | Nhạc Thiếu Nhi | Lời Việt: Lê Quốc ...
-url = https://www.youtube.com/watch?v=x-ljTpcenNg
+match = -147.4%%
+title = Nhạc Thiếu Nhi Vui Nhộn Cho Bé Yêu - Dậy Đi Ba Ơi, Chúc ...
+url = https://www.youtube.com/watch?v=or-AKdAjpMI
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -62,9 +62,9 @@ title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
 url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
-match = -126.3%%
-title = Mua Đồ Chơi Trẻ Em HT SYS - Bộ Đồ Chơi Lắp Ghép Kỹ ...
-url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html
+match = -110.5%%
+title = Chiếu tre hàng chính hãng, giao nhanh - Tháng 8, 2024
+url = https://tiki.vn/search?q=chiếu tre
 
 [khodem.vn]
 match = -31.6%%
