--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-10 03:50:49
+lastsearch = 2024-08-10 10:19:41
 
 [chieutruc.info]
 match = -100.0%%
@@ -37,9 +37,9 @@ title = Chiều Côi Sơn. Thị Trấn Gôi. Vụ Bản. NĐ...18. 7. 2024
 url = https://www.youtube.com/watch?v=m7F0VTU0EAI
 
 [www.facebook.com]
-match = 45.5%%
-title = Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
+match = 40.9%%
+title = Chiếu Cói Cao Cấp Nga Sơn
+url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
 match = -109.1%%
@@ -300,4 +300,9 @@ url = https://www.huggies.com.vn/mang-thai/thai-nhi-theo-tuan/bang-cac-chi-so-th
 match = -63.6%%
 title = Xem Phim Đang Chiếu Phim Hay Phim Mới Nhất Tại Rạp
 url = https://www.galaxycine.vn/phim-dang-chieu/
+
+[dantri.com.vn]
+match = -95.5%%
+title = Phim 18+ có Thái Hòa có thật sự đang cứu phòng vé Việt?
+url = https://dantri.com.vn/van-hoa/phim-18-co-thai-hoa-co-that-su-dang-cuu-phong-ve-viet-20240424105650123.htm
 
