--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-08-10 09:53:33
+lastsearch = 2024-08-10 10:27:42
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = LOA SADA D209 RGB TRẮNG
 url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-trang
 
 [batdongsan.com.vn]
-match = -200.0%%
-title = Mua Bán Đất Nền Dự Án đường D2, Quận 9 Giá Rẻ T8/2024
-url = https://batdongsan.com.vn/ban-dat-nen-du-an-duong-d2-61
+match = -140.0%%
+title = Mua Bán Đất đường D2, Quận 9 Giá Rẻ T8/2024
+url = https://batdongsan.com.vn/ban-dat-duong-d2-61
 
 [visaforkorea-vt.com]
 match = -113.3%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -126.7%%
-title = Tuổi trẻ Đà Nẵng adicionou uma foto nova.
-url = https://www.facebook.com/photo.php?fbid=470885098406144&id=100064539736066&set=a.457776343050353&locale=pt_PT
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
