CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-10 05:43:13
+lastsearch = 2024-08-10 10:54:25
 
 [www.tiktok.com]
 match = -152.9%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdohc81mX&sig=ACfU3U0LBCv7sh1vVApuZ-wOFbi5NPqsbQ&hl=en&sa=X&ved=2ahUKEwjxpK3_7OeHAxVgM1kFHdQnCzYQ6AF6BAhBEAM
+match = -88.2%%
+title = Griechisch-deutsches schulwörterbuch
+url = https://books.google.com/books?id=xv4sAAAAYAAJ&pg=PA309&lpg=PA309&dq=man+in+hoa+dep+16&source=bl&ots=GhvbUGdaWb&sig=ACfU3U0esA5WDldWcgAQNmJ8rqAV7QC7_Q&hl=en&sa=X&ved=2ahUKEwiM37K6w-mHAxUCEkQIHYT1Cu8Q6AF6BAgXEAM
 
 [tax.vermont.gov]
 match = -29.4%%
