--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-10 08:03:58
+lastsearch = 2024-08-10 10:47:58
 
 [silverwow.net]
 match = -255.6%%
@@ -219,7 +219,7 @@ url = https://www.itshot.com/jewelry/education-guides/strongest-chains
 [mightydepot.com]
 match = -377.8%%
 title = Chung John Wong Sun Chan pepper 3kg Korean food ...
-url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_
+url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_?srsltid=AfmBOormDb-WZzp9eRynOlna5BayhyCID8Sk2NdmbfQR-o6faBITw62M
 
 [s.click.aliexpress.com]
 match = -444.4%%
@@ -395,4 +395,9 @@ url = https://jbrooksjewelers.com/products/the-vintage-chan-chain
 match = -488.9%%
 title = Detection and tracking of barchan dunes using artificial ...
 url = https://www.nature.com/articles/s41598-024-67893-y
+
+[www.wkyc.com]
+match = -555.6%%
+title = Cleveland's Leading Local News: Weather, Traffic, Sports and ...
+url = https://www.wkyc.com/
 
