--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-10 05:28:36
+lastsearch = 2024-08-10 10:51:09
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -26.7%%
-title = Du học Hàn Quốc - ANIDO
-url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
+match = -106.7%%
+title = Busan Korean Food | Ho Chi Minh City
+url = https://www.facebook.com/Busan.Korean.Food/?locale=vi_VN
 
 [hoc247.vn]
 match = -213.3%%
@@ -134,7 +134,7 @@ url = https://katinat.vn/cua-hang-2/
 [bibomart.com.vn]
 match = -13.3%%
 title = BioAmicus Vitamin D3K2
-url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html
+url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html?srsltid=AfmBOorDvyZa341hZvxw6aZnnIHKWOVrHpoCiN8d6vnPxAuvxVIqjthS
 
 [www.nhathuocankhang.com]
 match = -220.0%%
