--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-10 06:43:30
+lastsearch = 2024-08-10 10:47:35
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = -19.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html?size=22
 
 [www.youtube.com]
 match = -142.9%%
@@ -532,9 +532,9 @@ title = Giá vàng: Trang chủ
 url = https://giavang.pnj.com.vn/
 
 [hanoionline.vn]
-match = -100.0%%
-title = Trình Chính phủ giải pháp ứng phó với ùn tắc đăng kiểm
-url = https://hanoionline.vn/video/trinh-chinh-phu-giai-phap-ung-pho-voi-un-tac-dang-kiem-257475.htm
+match = -71.4%%
+title = Đài Hà Nội – Tin tức, văn hóa và đời sống Thủ đô
+url = https://hanoionline.vn/
 
 [laodong.vn]
 match = -109.5%%
