--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-10 06:45:02
+lastsearch = 2024-08-10 11:23:10
 
 [www.diepxuan.com]
 match = 18.8%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOop7d5Xcr8uyLnrcLEkIVI6YiZFfXuQm_O9AHbCJvm_B2uDRr1ur
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -225.0%%
-title = @Dior Transfer Proof Lipstick (720 Forever Icone) #dior ...
-url = https://www.tiktok.com/@anneprettyness/video/7274035586653064479
+match = -168.8%%
+title = Carla We LOVE YOU!!! ❤️❤️❤️ Thank you beautiful for ...
+url = https://www.tiktok.com/@hudabeauty/video/7377293288686013739
 
 [archiveofourown.org]
 match = -137.5%%
