--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-10 10:52:37
+lastsearch = 2024-08-10 11:22:30
 
 [www.youtube.com]
 match = -40.7%%
@@ -19,7 +19,7 @@ url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-die
 [jysk.vn]
 match = -33.3%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoopIRf78z6Qf2c4J2Yf5zBArLyAxreFcaxRZeaJ82-n_9rqD74_
+url = https://jysk.vn/vo-goi-trang-tri
 
 [elambo.vn]
 match = -3.7%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOoq7Rk-z-SErK0vABq_HBVArt1fc1ZYIgmmUgj95T9HB3UbA7ase
+url = https://dienmaycholon.com/goi-vo-goi-simplehome
 
 [metruyen.me]
 match = 33.3%%
@@ -309,5 +309,5 @@ url = https://zingtruyen.top/chapter/duoc-lieu/3071807/duoc-lieu/8881556.html
 [www.liena.com.vn]
 match = 18.5%%
 title = Có Nên Giặt Ruột Gối Hay Không?
-url = https://www.liena.com.vn/co-nen-giat-ruot-goi?srsltid=AfmBOopQ4YkdHJVQqiE7ku99yAnHVGnARhIPR9mG9e7IBFf6lpk-cRws
+url = https://www.liena.com.vn/co-nen-giat-ruot-goi
 
