--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-10 06:49:14
+lastsearch = 2024-08-10 11:30:12
 
 [hanvico.com.vn]
 match = 50.0%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-chan-ks11/
 [www.diepxuan.com]
 match = -4.8%%
 title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
-url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
+url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOoooEafk86bW0CTllQ3nyabOI3IDoZOm16_Eyst6GwJDtxeXGCF-
 
 [lasantevn.com]
 match = -57.1%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -95.2%%
-title = Bộ chăn ga gối Sông Hồng chính hãng 100%% cotton mã BC21 ...
-url = https://changagoidemsonghong.com/chan-ga-goi-bc29
+match = -28.6%%
+title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
+url = https://changagoidemsonghong.com/chan-ga-goi-bc63
 
 [songhong.info]
 match = -19.0%%
@@ -44,7 +44,7 @@ url = https://songhong.info/chan-ga-goi-bc14
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOopweoc-_qzbBIdUhByiuwVgNppKP953WEvuPP7XGXNs4jqo79FJ
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -54,7 +54,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V14 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v14
+url = https://foreverbedding.net/bo-ga-chun-velina-v14?srsltid=AfmBOooWtjpcyvChUniSEgbM7uZhkG6L1NZhFe_D6FBmX7607ljzOU60
 
 [changmibedding.com]
 match = -33.3%%
