--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-10 04:33:55
+lastsearch = 2024-08-10 11:21:06
 
 [shopee.vn]
 match = 56.2%%
@@ -279,7 +279,7 @@ url = https://www.christies.com/en/lot/lot-5751621
 [leflair.com]
 match = -131.2%%
 title = Nước rửa chân khử mùi hôi, ngăn ngừa nấm HAKINI...
-url = https://leflair.com/en/shop/nuoc-rua-chan-khu-mui-hoi-ngan-ngua-nam-hakinika-98798?srsltid=AfmBOoqFQmeaXl3AeDWRtzrjLP_kMry9t2Hav5Yiwml5QDX2XC5IhDYH
+url = https://leflair.com/en/shop/nuoc-rua-chan-khu-mui-hoi-ngan-ngua-nam-hakinika-98798
 
 [olm.vn]
 match = -93.8%%
