--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-10 08:09:35
+lastsearch = 2024-08-10 11:25:40
 
 [www.muji.com]
 match = -33.3%%
@@ -37,9 +37,9 @@ title = Chăn lông tuyết muji mềm mại 2 lớp xuất nhật loại ...
 url = https://h5.lazada.vn/products/chan-long-tuyet-muji-mem-mai-2-lop-xuat-nhat-loai-long-mem-kich-thuoc-2mx2m3-nang-19kg-i1972993216.html
 
 [russo.vn]
-match = -207.1%%
-title = Những mẫu Chăn Muji thương hiệu hàng đầu của Nhật Bản
-url = https://russo.vn/nhung-mau-chan-muji-thuong-hieu-hang-dau-cua-nhat-ban/
+match = -107.1%%
+title = Chiếc chăn lông cừu muji chính hãng - Russo
+url = https://russo.vn/chiec-chan-long-cuu-muji/
 
 [coda.io]
 match = -164.3%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware?srsltid=AfmBOoqegYh6ayA-Wb0z2eJqE2bi2D6qgOZ3PjCgVyi_ShPoKcXzLLOa
+url = https://www.muji.us/collections/tableware
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -102,9 +102,9 @@ title = Muji Rice Bran Pickle
 url = https://www.tiktok.com/discover/muji-rice-bran-pickle
 
 [www.lazada.vn]
-match = -57.1%%
-title = Chăn Tuyết Muji Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/chan-tuyet-muji/
+match = -62.5%%
+title = Untitled
+url = https://www.lazada.vn/tag/chan-long-muji/
 
 [sugoimart.com]
 match = -257.1%%
