--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-08-10 10:45:09
+lastsearch = 2024-08-10 11:20:26
 
 [chieutruc.info]
 match = -60.0%%
@@ -14,7 +14,7 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOoojimGq29i_PxjmetTrzfWzyDH0UahgIUCRLZoPZbmImqCCZKbH
 
 [shopee.vn]
 match = -64.0%%
@@ -27,9 +27,9 @@ title = Chiếu Tre Cao Bằng - Đà Nẵng
 url = https://suongtuyet.com/chieu-truc-cao-bang
 
 [www.youtube.com]
-match = -64.0%%
-title = Siduhe cây cầu cao bằng toà nhà 200 tầng, xây dựng bằng ...
-url = https://www.youtube.com/watch?v=wKQEpBwWJkM
+match = -32.0%%
+title = Chiếu Trúc Cao Bằng Hàng Xuất Khẩu Dùng Liệu Có tốt?
+url = https://www.youtube.com/watch?v=sGb4V5EQcww
 
 [chieutrucsaigon.com]
 match = -4.0%%
@@ -69,7 +69,7 @@ url = https://antv.gov.vn/phap-luat-3/cong-an-cao-bang-bat-doi-tuong-lua-dao-hon
 [www.diepxuan.com]
 match = 32.0%%
 title = Chiếu cây Cao Bằng lụa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOoq6lcqtI87el6JEeyiKLncRkFSQvdFkbL5Im0qSgRZk64zi-Xx0
 
 [olm.vn]
 match = -48.0%%
