--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-10 04:38:47
+lastsearch = 2024-08-10 11:29:30
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -22,19 +22,19 @@ title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [tiki.vn]
-match = -19.4%%
-title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=chiếu trúc hạt
+match = -6.5%%
+title = Chiếu trúc hàng chính hãng, giao nhanh - Tháng 8, 2024
+url = https://tiki.vn/search?q=chiếu trúc
 
 [demxanh.com]
 match = -3.2%%
 title = Chuyên cung cấp chiếu trúc hạt các hãng hàng ...
-url = https://demxanh.com/chieu-truc-hat.html?srsltid=AfmBOor7kqmdCGbdV2DezmxKWzRbODE5c8tXJkl2SAscOOoVfLOOAH7b
+url = https://demxanh.com/chieu-truc-hat.html
 
 [www.sendo.vn]
-match = 54.8%%
-title = chiếu trúc hạt quế lâm hoa m8 - hjhgt
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-hoa-m8-29675515.html
+match = 0.0%%
+title = Chiếu trúc Quế Lâm loại 1 cao cấp ( loại có 2 mắt ngọc) ...
+url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-co-2-mat-ngoc-duo-c-kie-m-ha-ng-42210887-117572298.html
 
 [www.lazada.vn]
 match = 16.1%%
