--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-10 10:47:35
+lastsearch = 2024-08-10 11:21:27
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -277,9 +277,9 @@ title = Mức đóng bảo hiểm xã hội của công chức thay đổi thế
 url = https://bptv.vn/news/9/159224/muc-dong-bao-hiem-xa-hoi-cua-cong-chuc-thay-doi-the-nao-khi-luong-co-so-du-kien-tang-30
 
 [m.facebook.com]
-match = -137.5%%
-title = AOV News
-url = https://m.facebook.com/mobaaovnews/photos/-văn-hóa-đôn-hoàng-rực-rỡ-và-bí-ẩn-tranh-đôn-hoàng-cát-vàng-chảy-sấm-sét-đan-xen/1135114811471973/
+match = -95.2%%
+title = casual Đà nẵng | KHÁCH SẠN SEL DE MER HOTEL & ...
+url = https://m.facebook.com/groups/303223456724518/posts/2101917873521725/
 
 [thuvienphapluat.vn]
 match = -109.5%%
