--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-10 10:45:51
+lastsearch = 2024-08-10 11:18:22
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = giương mn 1
 url = https://www.diepxuan.com/giuong-mn-1.html
 
 [giuonggaphoaphat.com]
-match = -27.3%%
-title = Giuonggaphoaphat.com
-url = http://giuonggaphoaphat.com/
+match = -281.8%%
+title = GIƯỜNG GẤP NÂNG ĐẦU NHẬT BẢN RỘNG 67.5 PHÂN (MÃ ...
+url = http://giuonggaphoaphat.com/giuong-gap-nang-dau-nhat-ban
 
 [noithatdogodungduyen.com]
 match = -136.4%%
@@ -117,9 +117,9 @@ title = Weather Xom Giuong (1) - Long term weather forecast
 url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/weekly/?gid=1561485&mn=2&wk=1&language=english&country=vietnam
 
 [www.booking.com]
-match = -290.9%%
-title = Country Inn & Suites by Radisson, Albertville, MN
-url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
+match = -281.8%%
+title = Country Inn & Suites by Radisson, Stillwater, MN
+url = https://www.booking.com/hotel/us/lexington-inn-stillwater.vi.html
 
 [www.agoda.com]
 match = -354.5%%
@@ -205,4 +205,9 @@ url = https://bentreriverside.com/room/suite-huong-song-1-giuong-doi/
 match = -163.6%%
 title = Xom Giuong (2), Vietnam Current Weather
 url = https://freemeteo.mn/mobile/weather/xom-giuong-2/current-weather/location/?gid=1561484&language=english&country=vietnam
+
+[dogothien.com]
+match = -54.5%%
+title = Giường 1,8m 2m Gỗ Hương Lào
+url = https://dogothien.com/index.php/product/giuong-18m-2m/
 
