--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-08-10 00:45:38
+lastsearch = 2024-08-10 11:19:44
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -19,7 +19,7 @@ url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.htm
 [demxanh.com]
 match = -75.0%%
 title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 16
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-16.html
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-16.html?srsltid=AfmBOorMBnWa75Wfj2ArhNKhVEH-uCoBIZTFQugxKKpAFddprs7hV3ax
 
 [www.facebook.com]
 match = -75.0%%
