CI images update

--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-phu-warmdream-freesize-phi-lua.html
 lastopen = 2024-06-10 00:45:38
 
 [search]
-lastsearch = 2024-08-10 06:36:02
+lastsearch = 2024-08-10 11:45:38
 
 [changagoidem.co]
 match = 8.3%%
@@ -34,7 +34,7 @@ url = https://sieuthimuare.com/chan-ga-goi-phi-lua-chan-bong/
 [vuanem.com]
 match = -2.8%%
 title = Top 15 mẫu drap giường phi lụa được yêu thích nhất
-url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html
+url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html?srsltid=AfmBOorlNc8ww7kLN_V4PLD6rBQrvR4wv5L7d5UV2pryKsvuKZx9rn8E
 
 [diepxuan.com]
 match = 17.1%%
