--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-08-10 09:13:15
+lastsearch = 2024-08-10 11:38:16
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopiExCYtU1UU5MXHBgGSdAhKsFBIiP5Lqc2hR3h0RCRrmQXgv21
 
 [shopee.vn]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hoà
 [demviethome.vn]
 match = 14.8%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOooUxdqbiSnhhB_OrRqZ2OoY7aunNTIQ2c7FjDyFsYfFLSDIOpDs
 
 [lybalansieucute.com]
 match = 37.0%%
@@ -27,9 +27,9 @@ title = CHIẾU ĐIỀU HÒA NỘI ĐỊA NANJIREN 11-18
 url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 
 [tiki.vn]
-match = 33.3%%
-title = Chiếu điều hòa có mát không? Review 10 ...
-url = https://tiki.vn/blog/chieu-dieu-hoa/
+match = 29.6%%
+title = Chiếu điều hoà 3d cao su non 1,8 x2m ...
+url = https://tiki.vn/search?q=chiếu điều hoà 3d cao su non 1,8 x2m
 
 [suongtuyet.com]
 match = -29.6%%
