--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-10 06:27:47
+lastsearch = 2024-08-10 11:39:18
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -19,7 +19,7 @@ url = https://www.thegioididong.com/hoi-dap/2-cach-do-size-vong-tay-lac-tay-chin
 [cellphones.com.vn]
 match = -212.5%%
 title = Balo laptop | Túi chống sốc kháng nước tốt, mẫu mới cao cấp
-url = https://cellphones.com.vn/phu-kien/balo-tui-chong-soc-laptop.html?srsltid=AfmBOooyFkO6vUOvDg4umA9Vfm9zSNgfkCoFG2ZY5h6oc_TfZgux07Lt
+url = https://cellphones.com.vn/phu-kien/balo-tui-chong-soc-laptop.html
 
 [www.diepxuan.com]
 match = 87.5%%
@@ -32,9 +32,9 @@ title = Nghi thức đọc tụng trên xe về chùa vào các ngày 14, 30 và
 url = https://phamthiyen.com/nghi-thuc-doc-tung-tren-xe-ve-chua-vao-cac-ngay-14-30-va-cac-ngay-ve-chua-lam-phan-su-c1687.html
 
 [langmai.org]
-match = -18.8%%
-title = Tụng 14 Giới Tiếp Hiện
-url = https://langmai.org/phat-duong/tung-gioi/tung-14-gioi-tiep-hien/
+match = 0.0%%
+title = Bài 14 – Quán buông bỏ
+url = https://langmai.org/thien-duong/sen-bup-tung-canh-he/bai-14-quan-chieu-buong-bo/
 
 [phaata.com]
 match = -118.8%%
@@ -535,4 +535,9 @@ url = https://www.vaticannews.va/vi/loi-chua-hang-ngay/2024/07/14.html
 match = -168.8%%
 title = Ngày 9/8: Giá gas tiếp đà giảm xuống mức 2,14 USD ...
 url = https://thoibaotaichinhvietnam.vn/ngay-98-gia-gas-tiep-da-giam-xuong-muc-214-usdmmbtu-156784.html
+
+[www.vietjetair.com]
+match = 12.5%%
+title = Giấy tờ tùy thân
+url = https://www.vietjetair.com/ko/pages/de-co-chuyen-bay-tot-dep-1578323501979/giay-to-tuy-than-1578483122906
 
