--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-10 10:20:21
+lastsearch = 2024-08-10 11:34:41
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Sto
 url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
 
 [chanrathanhthuy.com]
-match = 25.0%%
-title = 10 bộ chăn ga gối đệm tencel đẹp nhất
-url = https://chanrathanhthuy.com/tin-tuc/10-bo-chan-ga-goi-dem-tencel-dep-nhat-714.html
+match = 29.2%%
+title = Top 20 mẫu chăn ga gối đẹp giá rẻ
+url = https://chanrathanhthuy.com/tin-tuc/top-20-mau-chan-ga-goi-dep-gia-re-703.html
 
 [myhunggia.com]
 match = -4.2%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng HOME COLLECTION H16 036 ...
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16036-ga-phu.html
 
 [cuahangchangagoidem.com]
-match = -45.8%%
-title = Chăn Ga Gối Đệm Cao Cấp Giá Tốt Freeship Tích Điểm
-url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
+match = -25.0%%
+title = 13 Bộ Chăn Ga Gối Đệm Cưới Màu Đỏ Đẹp, Ý Nghĩa 2023
+url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cuoi-mau-do/
 
 [tiki.vn]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -54.2%%
-title = bộ chăn ga gối sông hồng doremon d16 015 giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=bộ chăn ga gối sông hồng doremon d16 015
+match = -75.0%%
+title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
+url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
 match = -25.0%%
