--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-08-10 08:11:57
+lastsearch = 2024-08-10 11:50:38
 
 [chieutruc.info]
 match = -73.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
 url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [chieutrucsaigon.com]
-match = -13.0%%
-title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
+match = 43.5%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
 
 [shopee.vn]
 match = -65.2%%
