--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-08-10 06:55:30
+lastsearch = 2024-08-10 11:49:29
 
 [shadow.vn]
 match = -140.0%%
@@ -14,7 +14,7 @@ url = https://shadow.vn/den-pin-chieu-xa-fenix-ht18r
 [chuyentactical.com]
 match = 0.0%%
 title = Đèn Pin Fenix - HT18R
-url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/
+url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/?srsltid=AfmBOorz7j5-sZbWGx1WcbHCbcWSyL53c5c3cTN_fVgeuSlOZJxsjwhM
 
 [bisu.vn]
 match = -113.3%%
@@ -93,8 +93,8 @@ url = https://sieuthicamtay.com.vn/camera-nhiet-do-cam-tay-ht-18
 
 [www.thietbidiendgp.vn]
 match = -166.7%%
-title = Đèn mâm nổi led HT, 18W Vuông HT MAX LIGHT | MV-18T
-url = https://www.thietbidiendgp.vn/products/den-mam-noi-led-ht-18w-vuong
+title = Đèn Led Siêu Mỏng Tròn HT 18W HT MAX LIGHT | ST-18T
+url = https://www.thietbidiendgp.vn/products/den-led-sieu-mong-tron-ht-18w
 
 [dangquanglighting.com]
 match = -33.3%%
@@ -189,7 +189,7 @@ url = https://moc.gov.vn/tl/tin-tuc/62544/ha-noi--dam-bao-chieu-sang--ve-sinh-mo
 [www.lazada.vn]
 match = -140.0%%
 title = Đèn pin chiếu xa FENIX HT18R sáng 2800 lumen ...
-url = https://www.lazada.vn/products/den-pin-chieu-xa-fenix-ht18r-sang-2800-lumen-chieu-xa-1100m-pin-sac-21700-5000mah-kem-theo-i2502984890.html
+url = https://www.lazada.vn/products/den-pin-chieu-xa-fenix-ht18r-sang-2800-lumen-chieu-xa-1100m-pin-sac-21700-5000mah-kem-theo-i2502984890.html?srsltid=AfmBOopFjpIgz7JqCE_-Cs68i0gF9cAtmFXjeqaeHhK8xqslI_SCQAmA
 
 [hachi.com.vn]
 match = -173.3%%
