--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-08-10 05:32:30
+lastsearch = 2024-08-10 11:47:00
 
 [www.diepxuan.com]
 match = 42.4%%
 title = Điệp Xuân Chiếu nhựa Hà Nội 180x300
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html?srsltid=AfmBOoqI1qjyJcnTVY4_c_UP3yDZo5Pdk2uxEb_6q8-FO9qr51_Fo9Fz
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html
 
 [shopee.vn]
 match = 9.1%%
