--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-08-10 10:37:05
+lastsearch = 2024-08-10 11:37:55
 
 [hanvico.net.vn]
 match = -10.5%%
@@ -54,7 +54,7 @@ url = https://aoiconcept.com/products/ruot-goi-nam-cao-cap-a-oi-concept-50x70cm-
 [jysk.vn]
 match = -100.0%%
 title = Ruột gối lông vũ | KRONBORG LOFTET | 50x70cm | 720gr
-url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr
+url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr?srsltid=AfmBOopbSP2voz143hUYEe32FJduLCDGts2nfAi0Nd8Xme-mvuSRsjST
 
 [shopee.vn]
 match = -110.5%%
