--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-10 06:33:35
+lastsearch = 2024-08-10 11:50:59
 
 [en.wikipedia.org]
-match = -31.2%%
-title = Gwangju Uprising
-url = https://en.wikipedia.org/wiki/Gwangju_Uprising
+match = -50.0%%
+title = Park Chung Hee
+url = https://en.wikipedia.org/wiki/Park_Chung_Hee
 
 [www.britannica.com]
 match = 0.0%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = -34.8%%
-title = Guy Falls Through Soft Play Full Video
-url = https://www.tiktok.com/discover/guy-falls-through-soft-play-full-video
+match = -39.1%%
+title = Wont Let Me Talk Basic Training Valorant
+url = https://www.tiktok.com/discover/wont-let-me-talk-basic-training-valorant
 
 [www.unikorea.go.kr]
 match = -113.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=9151a8439784d494&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjSw-yTiemHAxWDC3kGHXJ5LsQQsZYEegQIVxAC
+url = https://www.google.com/search?sca_esv=35e5c2f758f80f43&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwi0xLqM0OmHAxVOm4kEHcZBBkQQsZYEegQIUhAC
 
 [produccionesitaca.es]
 match = -21.4%%
@@ -222,9 +222,9 @@ title = In-processing
 url = https://www.2id.korea.army.mil/Newcomers/In-processing/
 
 [www.usfk.mil]
-match = -13.0%%
-title = Korean War Armistice Agreement
-url = https://www.usfk.mil/Portals/105/Documents/SOFA/G_Armistice_Agreement.pdf
+match = 4.3%%
+title = Freedom Shield 24 set to begin
+url = https://www.usfk.mil/Media/Press-Products/Press-Releases/Article/3688893/freedom-shield-24-set-to-begin/
 
 [cryptonews.com]
 match = -73.9%%
