CI images update

--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-10 06:00:27
+lastsearch = 2024-08-10 12:18:04
 
 [www.youtube.com]
 match = -157.9%%
@@ -72,8 +72,8 @@ title = Cây hoa Mộc Hương
 url = https://qkhgarden.com/products/cay-hoa-moc-huong
 
 [guitanghoa.com]
-match = -147.4%%
-title = Cây Hoa Mộc Lan Là Hoa Gì? - Hình ảnh Và Ý nghĩa của ...
+match = -157.9%%
+title = Cây Hoa Mộc Lan Là Hoa Gì? - Hình ảnh Và Ý nghĩa của chúng
 url = https://guitanghoa.com/hoa-dep/cay-hoa-moc-lan/
 
 [vi.wikipedia.org]
@@ -194,12 +194,12 @@ url = https://webthethao.vn/euro/truoc-luc-quyet-dau-o-euro-2024-ha-lan-romania-
 [www.diepxuan.com]
 match = 0.0%%
 title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html?srsltid=AfmBOortfQahTxdpCeIR1aYkxRWcUsjjOJ0kQL0xrhQuaslNV-HNonAv
 
 [baobinhphuoc.com.vn]
-match = -163.2%%
-title = Khai mạc Triển lãm Hiệp định Geneva về đình chỉ chiến sự ...
-url = https://baobinhphuoc.com.vn/news/19/160078/khai-mac-trien-lam-hiep-dinh-geneva-ve-dinh-chi-chien-su-o-viet-nam
+match = -42.1%%
+title = Mộc Châu - nơi bình yên mùa xuân về
+url = https://baobinhphuoc.com.vn/news/19/92785/moc-chau---noi-binh-yen-mua-xuan-ve
 
 [zingtruyen.top]
 match = 21.1%%
@@ -405,4 +405,9 @@ url = https://www.yellowpages.vn/tgcls/90138510/cây-xanh-nội-thất.html?i=8
 match = -105.3%%
 title = Đảng bộ Tỉnh Hưng Yên - Ban Tuyên giáo Tỉnh ủy
 url = https://tuyengiao.hungyen.dcs.vn/chuyen-muc-tin-tuc-hoat-dong-c219-2.html
+
+[www.lmhtx.hochiminhcity.gov.vn]
+match = -47.4%%
+title = Nấm rơm: Hướng dẫn trồng và thu hoạch
+url = http://www.lmhtx.hochiminhcity.gov.vn/web/guest/khoa-hoc-cong-nghe;jsessionid=47939F46A9AA95E367D44A87F8C7E5D3?p_p_id=EXT_ARTICLEVIEW&p_p_lifecycle=0&p_p_state=normal&p_p_col_id=column-eighty-right&p_p_col_count=1&_EXT_ARTICLEVIEW_struts_action=/ext/articleview/view&_EXT_ARTICLEVIEW_groupId=18&_EXT_ARTICLEVIEW_articleId=136114&_EXT_ARTICLEVIEW_version=1.0&_EXT_ARTICLEVIEW_i=18&_EXT_ARTICLEVIEW_curValue=1&_EXT_ARTICLEVIEW_redirect=/web/guest/khoa-hoc-cong-nghe?p_p_id=EXT_ARTICLEVIEW&amp;amp;p_p_lifecycle=0&amp;amp;p_p_col_id=column-3&amp;amp;p_p_col_pos=4&amp;amp;p_p_col_count=5&amp;amp;_EXT_ARTICLEVIEW_articleId=133603&amp;amp;_EXT_ARTICLEVIEW_version=1.0
 
