--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-10 05:46:18
+lastsearch = 2024-08-10 12:24:37
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -17,9 +17,9 @@ title = Bộ ga chun Velina V18 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -114.3%%
-title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
+match = -66.7%%
+title = ga chun bọc nệm giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=ga chun bọc nệm
 
 [changagoidemsonghong.com]
 match = -57.1%%
