--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-10 10:40:34
+lastsearch = 2024-08-10 12:15:58
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
 url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
-match = -175.0%%
-title = FULL MATCH: THỂ CÔNG-VIETTEL - CÔNG AN HÀ NỘI | V ...
-url = https://www.youtube.com/watch?v=Fqh5JHCjVzE
+match = -218.8%%
+title = Thế giới toàn cảnh 9/8: Nguy cơ xảy ra siêu động đất kèm ...
+url = https://www.youtube.com/watch?v=QERW72aG3WY
 
 [books.google.com]
 match = -218.8%%
@@ -252,9 +252,9 @@ title = Viet Cong and People's Army of Vietnam use of terror in the ...
 url = https://en.wikipedia.org/wiki/Viet_Cong_and_People's_Army_of_Vietnam_use_of_terror_in_the_Vietnam_War
 
 [baoquangnam.vn]
-match = -200.0%%
-title = Câu lạc bộ bóng bàn Ái Liên (Tam Kỳ): Từ “đường phố” ...
-url = https://baoquangnam.vn/cau-lac-bo-bong-ban-ai-lien-tam-ky-tu-duong-pho-den-san-choi-toan-quoc-3137646.html
+match = -212.5%%
+title = Khai mạc giải quần vợt truyền thống Công an tỉnh Quảng ...
+url = https://baoquangnam.vn/khai-mac-giai-quan-vot-truyen-thong-cong-an-tinh-quang-nam-mo-rong-lan-thu-x-nam-2024-3139317.html
 
 [thoibaotaichinhvietnam.vn]
 match = -193.8%%
@@ -357,9 +357,9 @@ title = C1 Sport - phường Hóa An vô địch Giải bóng đá các xã ...
 url = https://baodongnai.com.vn/the-thao/202406/c1-sport-phuong-hoa-an-vo-dich-giai-bong-da-cac-xa-phuong-thi-tran-tinh-dong-nai-2024-eef4b09/
 
 [m.facebook.com]
-match = -131.2%%
-title = Cứu trợ - Chó Mèo lạc Tìm chủ Hà Nội | 16/5 Chiều
-url = https://m.facebook.com/groups/1216027058917461/posts/1800765410443620/
+match = 25.0%%
+title = Chiều nay 3h em có Cúm
+url = https://m.facebook.com/groups/477065866263029/posts/1570004760302462/
 
 [thanhnien.vn]
 match = -187.5%%
@@ -587,9 +587,9 @@ title = 6 địa điểm tiêm HPV ở Đà Nẵng uy tín: Giá tiền và các
 url = https://vnvc.vn/dia-diem-tiem-hpv-o-da-nang/
 
 [media.chinhphu.vn]
-match = -187.5%%
-title = Thông qua Chiến lược hợp tác Mekong-Nhật Bản 2024 với ...
-url = https://media.chinhphu.vn/thong-qua-chien-luoc-hop-tac-mekong-nhat-ban-2024-voi-cac-dinh-huong-hop-tac-5-nam-toi-102240727083626449.htm
+match = -225.0%%
+title = Amway Việt Nam-Nửa thập kỷ giữ vững thương hiệu 'Nơi làm ...
+url = https://media.chinhphu.vn/amway-viet-nam-nua-thap-ky-giu-vung-thuong-hieu-noi-lam-viec-tot-nhat-chau-a-102240809170010846.htm
 
 [www.quangninh.gov.vn]
 match = -193.8%%
