--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-08-10 07:00:48
+lastsearch = 2024-08-10 12:20:07
 
 [demxanh.com]
 match = -94.1%%
@@ -32,9 +32,9 @@ title = Bảng Giá tháng 4-5/2024 | Chiếu Trúc Hạt Đen | GIÁ TỐT ✅
 url = https://thegioidemviet.vn/chieu-truc-hat-den/
 
 [shopee.vn]
-match = -105.9%%
-title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
-url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
+match = -35.3%%
+title = Chiếu trúc hạt đen không viền loại đẹp
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-loại-đẹp-i.270303342.9119500161
 
 [vongxepsaigon.vn]
 match = 47.1%%
@@ -95,4 +95,9 @@ url = https://khodem.vn/chieu-truc-huong-truc/
 match = -5.9%%
 title = Chiếu Trúc hạt đen cực đẹp cực rẻ
 url = https://chieu.com.vn/san-pham/chieu-truc-hat-den-cuc-dep-cuc-re-2/
+
+[thegioichieutruc.com]
+match = 35.3%%
+title = Chiếu trúc hạt đen cao cấp
+url = https://thegioichieutruc.com/chieu-truc-hat-den-cao-cap/
 
