--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-10 11:29:30
+lastsearch = 2024-08-10 12:14:55
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chiếu trúc
 [demxanh.com]
 match = -3.2%%
 title = Chuyên cung cấp chiếu trúc hạt các hãng hàng ...
-url = https://demxanh.com/chieu-truc-hat.html
+url = https://demxanh.com/chieu-truc-hat.html?srsltid=AfmBOooTOdYaWn3yXqH5RG2okNlbPspRwbxlAOHjvZkBDXjKb6-K4_iu
 
 [www.sendo.vn]
 match = 0.0%%
