--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-10 06:49:34
+lastsearch = 2024-08-10 12:13:52
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -222,9 +222,9 @@ title = Pima County, AZ | Official Website
 url = https://www.pima.gov/
 
 [www.youtube.com]
-match = -182.4%%
-title = Bông Hoa Đẹp Nhất, Suýt Nữa Thì, Một Đêm Say....| Andiez ...
-url = https://www.youtube.com/watch?v=kESfG4X6QjY
+match = -123.5%%
+title = Như Quỳnh - Xuân Đẹp Làm Sao (Thanh Sơn) PBN 101
+url = https://www.youtube.com/watch?v=QcBvdLl0L1c
 
 [www.gsa.gov]
 match = -44.4%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -170.6%%
-title = Defund the HOA... . . . #HOA #DefundTheHOA #Neighborhood
-url = https://www.tiktok.com/@dudedad/video/7354147793197354283
+match = -111.8%%
+title = I need advice #lawyer #hoa #taylorswift | hoa
+url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
 
 [www.21alivenews.com]
 match = -123.5%%
