--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-08-10 10:01:08
+lastsearch = 2024-08-10 12:24:58
 
 [shope.io.vn]
 match = -59.3%%
@@ -14,7 +14,7 @@ url = https://shope.io.vn/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-ho
 [www.diepxuan.com]
 match = 3.7%%
 title = Ruột gối kê Everon 45x65 Thin - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thin.html
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thin.html?srsltid=AfmBOorgIB_WqZtvCNLkg_Be8m8eodUvW6HSs84gEOYy8LL4VxifAPWI
 
 [giasale.com]
 match = -59.3%%
