--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-10 10:17:16
+lastsearch = 2024-08-10 12:18:46
 
 [thamaulac.com.vn]
 match = -22.2%%
@@ -27,9 +27,9 @@ title = 60*60*10 tấm- Thảm xốp mặt nỉ hoa văn Âu Lạc
 url = http://trieuchau.com/vi-vn/1057/28071/Tham-Xop-60x60cm/606010-tam-Tham-xop-mat-ni-hoa-van-Au-Lac
 
 [shopee.vn]
-match = -111.1%%
-title = thảm ghép 60x60cm giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
+match = -138.9%%
+title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm xốp/trải sàn
 
 [vatlieulotsan.com]
 match = -83.3%%
@@ -57,9 +57,9 @@ title = Thảm xốp trơn đơn màu 60x60
 url = https://thamht.vn/products/tham-lot-tre-nam-choi
 
 [tiki.vn]
-match = -127.8%%
-title = Mua 10 tấm xốp ghép, mặt thảm nỉ kích thước 60cm x ...
-url = https://tiki.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-60cm-x-60cm-x-0-6cm-tam-mau-xam-p74677292.html
+match = -111.1%%
+title = Thảm xốp lót sàn 60x60 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm xốp lót sàn 60x60
 
 [thamtretho.com]
 match = -66.7%%
