CI images update

--- a/images/chieu-dieu-hoa-lua-140x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190.html
 lastopen = 2024-08-08 17:47:40
 
 [search]
-lastsearch = 2024-08-10 03:17:21
+lastsearch = 2024-08-10 12:42:17
 
 [www.diepxuan.com]
 match = 23.1%%
@@ -22,9 +22,9 @@ title = Chiếu điều hoà sợi mây- Chiếu Ngủ (140x190cm) hàng ...
 url = https://www.lazada.vn/products/chieu-dieu-hoa-soi-may-chieu-ngu-140x190cm-hang-vn-cao-cap-chat-luong-cao-thoang-mat-i2037665974.html
 
 [demxanh.com]
-match = 0.0%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 34.6%%
+title = Chiếu điều hòa mây viền lụa loại đẹp
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
 
 [tiki.vn]
 match = -11.5%%
