--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-08-10 10:38:51
+lastsearch = 2024-08-10 12:40:55
 
 [everonvn.com.vn]
 match = 14.3%%
 title = Bộ Everon Es1807 - Serenity
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOopoeAhETGsTe_Tg404QJxzz0H6ku65nWMfxumaB1-rsNSKFsKb3
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [everonhanoi.vn]
 match = -23.8%%
