--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-10 03:21:51
+lastsearch = 2024-08-10 12:33:36
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -280,4 +280,9 @@ url = https://www.virginholidays.co.uk/destinations/far-east/singapore-holidays
 match = -133.3%%
 title = Books - The Flames of Hope (Wings of Fire #15)
 url = https://www.amazon.sg/Flames-Hope-Wings-Fire-15/dp/1338214578
+
+[www.gcmap.com]
+match = -140.0%%
+title = Longest Flights from Singapore (25 February 2024)
+url = http://www.gcmap.com/featured/20240225
 
