--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 15.8%%
+title = Charles Chiu, MD, PhD
+url = https://profiles.ucsf.edu/charles.chiu
 
 [profiles.stanford.edu]
 match = -36.8%%
