--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-10 10:40:13
+lastsearch = 2024-08-10 12:30:52
 
 [everonvn.com.vn]
 match = 15.8%%
@@ -47,9 +47,9 @@ title = Everon Bedding Collection 2019 by quangbv
 url = https://issuu.com/quangbv/docs/everon-bedding_collection_2019-comp
 
 [vn.biggo.com]
-match = -48.1%%
-title = Bộ Chăn Hè Everon giá rẻ Tháng 4,2024|BigGo Việt Nam
-url = https://vn.biggo.com/s/bộ+chăn+hè+everon/
+match = -37.0%%
+title = Everon Sale giá rẻ Tháng 8,2024|BigGo Việt Nam
+url = https://vn.biggo.com/s/everon+sale/
 
 [bonbonbon.com]
 match = 11.1%%
