--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-10 11:48:17
+lastsearch = 2024-08-10 12:40:34
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -87.5%%
-title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
+match = -33.3%%
+title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22002
+url = https://www.everonvn.vn/chi-tiet/everon-esm22002.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -58,8 +58,8 @@ url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
 
 [dongahome.vn]
 match = -12.5%%
-title = Bộ chăn ga SH_UC22 019 cao cấp Sông Hồng
-url = https://dongahome.vn/bo-chan-ga-sh_uc22-019
+title = Bộ chăn ga SH_UC22 018 cao cấp Sông Hồng
+url = https://dongahome.vn/bo-chan-ga-sh_uc22-018
 
 [thegioinem.com]
 match = -12.5%%
