--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-10 10:18:40
+lastsearch = 2024-08-10 12:31:32
 
 [tiki.vn]
 match = -133.3%%
@@ -12,9 +12,9 @@ title = Mua Chăn lông cừu 2 lớp loại dày cho bé nhiều mẫu
 url = https://tiki.vn/chan-long-cuu-2-lop-loai-day-cho-be-nhieu-mau-size-1m4-x-1m-sieu-am-p69905522.html
 
 [joliefam.vn]
-match = -140.0%%
-title = Chăn cừu pháp Joliefam - Tổng hợp các mẫu màu đẹp
-url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
+match = -13.3%%
+title = Chăn cừu pháp Joliefam ghi tối
+url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
 
 [www.lazada.vn]
 match = -166.7%%
@@ -42,9 +42,9 @@ title = Chăn lông cừu - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chăn/lông cừu
 
 [changadep88.vn]
-match = -86.7%%
-title = Chăn lông cừu 2 lớp Lasante - Scarlet Ghi
-url = https://changadep88.vn/san-pham/chan-thu-dong-mem-mai-2-lop-lasante-scarlet/
+match = -80.0%%
+title = Giá Chăn lông cừu Anh Latalia và Lasante
+url = https://changadep88.vn/chan-long-cuu-anh-gia-bao-nhieu/
 
 [www.demgiare.net]
 match = -153.3%%
