--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-10 11:42:09
+lastsearch = 2024-08-10 12:30:31
 
 [demxanh.com]
 match = 3.4%%
@@ -47,9 +47,9 @@ title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
 url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [thegioidemonline.com]
-match = 37.9%%
-title = Chiếu điều hòa cao su non Tencel màu Ghi
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Tencel Xanh nhạt
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [shopee.vn]
 match = -20.7%%
