--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-10 10:19:01
+lastsearch = 2024-08-10 12:43:41
 
 [demxanh.com]
-match = 43.5%%
-title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html?srsltid=AfmBOor2GVOtqfpgJuFu23MeTEDYIuB5GbL78vYCxIX6d3PjH9nF-UTU
+match = -3.3%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [suongtuyet.com]
 match = -13.3%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/?srsltid=AfmBOooeQQvLiYgivoejd5ZCvFUqtMVS4AxOd7K0GHmJS673S5vA3pIm
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
 
 [www.dienmayxanh.com]
 match = -36.7%%
