--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-10 10:42:16
+lastsearch = 2024-08-10 12:32:54
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Mai Huyền ❤️FREESHIP ...
 url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-❤️FREESHIP❤️-Chiếu-Nhựa-Hà-Nội-(1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m)-i.126028938.4749254076
 
 [tchome.vn]
-match = 20.0%%
-title = CHIẾU NHỰA HÀ NỘI 1 MÉT 2 - TC-HOME
-url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-1-met-2-sp22544.html
+match = 35.0%%
+title = CHIẾU NHỰA HÀ NỘI 1,8m - TC-HOME
+url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-18m-sp22546.html
 
 [tandaiphong.com.vn]
 match = 46.7%%
@@ -49,12 +49,12 @@ url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOorVnoWK2_ngBgd_xjTCLRVFwQpDLqAfx48I02GBPBIj5gaqPYt-
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOoq5p5fFwgopy8DKWAmKEXfkBUZFsVHMzsXEuIIXg8nVrr3lDHvK
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
 
 [thuanloitrading.com]
 match = 10.0%%
