--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-10 10:32:12
+lastsearch = 2024-08-10 12:44:21
 
 [www.diepxuan.com]
-match = 35.7%%
-title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
+match = 42.9%%
+title = Chiếu nhựa Hà Nội 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 
 [shopee.vn]
 match = -7.1%%
