--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-10 09:56:01
+lastsearch = 2024-08-10 12:41:16
 
 [chieutrelanlan.com]
-match = 10.7%%
-title = Chiếu trúc quế lâm màu trắng không viền 180x200cm
-url = https://chieutrelanlan.com/chieu-truc-que-lam-mau-trang-khong-vien-180x200cm-39.html
+match = -7.1%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -17,14 +17,14 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [demxanh.com]
-match = -28.6%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -10.7%%
+title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
+url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
-match = 67.9%%
-title = Chiếu trúc quế lâm(hàng loại1)
-url = https://shopee.vn/Chiếu-trúc-quế-lâm(hàng-loại1)-i.33372594.4619688771
+match = -3.6%%
+title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [www.diepxuan.com]
 match = 28.6%%
@@ -42,9 +42,9 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [tiki.vn]
-match = 34.6%%
-title = Mua Chiếu trúc hạt Quế Lâm
-url = https://tiki.vn/chieu-truc-hat-que-lam-p87383232.html?spid=170118061/
+match = -39.3%%
+title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 8, 2024
+url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [www.sendo.vn]
 match = -10.7%%
