--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-10 10:30:47
+lastsearch = 2024-08-10 12:42:59
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -37,9 +37,9 @@ title = Northwest Georgia Scanner
 url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -338.5%%
-title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
-url = https://www.youtube.com/watch?v=wwH3mdjbKac
+match = -215.4%%
+title = Jay-Z & Kanye West - Ni**as In Paris (Explicit)
+url = https://www.youtube.com/watch?v=gG_dA32oH44
 
 [www.regmovies.com]
 match = -215.4%%
@@ -272,9 +272,9 @@ title = The Little Bus Tayo Special Wind-Up Set : Toys & Games
 url = https://www.amazon.com/Tayo-Little-Bus-Play-Set/dp/B0084TMPQ6
 
 [www.imdb.com]
-match = -223.1%%
-title = Ore no imouto ga konna ni kawaii wake ga nai (2010)
-url = https://www.imdb.com/title/tt1751305/
+match = 0.0%%
+title = Silenced (2011)
+url = https://www.imdb.com/title/tt2070649/
 
 [ottawabraves.com]
 match = -292.3%%
@@ -730,4 +730,9 @@ url = https://www.fcc.navy.mil/
 match = -192.3%%
 title = [SA]CANAL rocker power switch Gani long flat ...
 url = https://www.aliexpress.com/i/32471733900.html
+
+[www.cinemark.com]
+match = -15.4%%
+title = Full Theatre List
+url = https://www.cinemark.com/full-theatre-list/
 
