--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-10 11:52:51
+lastsearch = 2024-08-10 12:46:25
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -164.7%%
-title = Hoa took my trailer!! #hoa #neighbor #karen #karenmovie
-url = https://www.tiktok.com/@hoa.guy/video/7374755848872103214
+match = -76.5%%
+title = Im done with it #neighbors #hoa #creatine
+url = https://www.tiktok.com/@koltindarley/video/7309119538296065323
 
 [www.steadily.com]
 match = 0.0%%
@@ -297,9 +297,9 @@ title = The Reinstatement of Covenants, Conditions, and ...
 url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-covenants-conditions-and-restrictions-extinguished-by-the-marketable-record-title-act/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+14&source=bl&ots=2iloQwt43I&sig=ACfU3U3v5McBKN1xUj_mguDlCotEubUzmA&hl=en&sa=X&ved=2ahUKEwjcqK6IruiHAxUpEkQIHZE1CggQ6AF6BAhBEAM
+match = -105.9%%
+title = The Monthly Army List - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdohic4lV&sig=ACfU3U1h9Dt7gOUJo9s51KRnQT9Y63b8cQ&hl=en&sa=X&ved=2ahUKEwisybC-3OmHAxXeEkQIHfQFMaoQ6AF6BAgmEAM
 
 [www.house.gov]
 match = 11.8%%
