--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-10 06:17:53
+lastsearch = 2024-08-10 12:40:13
 
 [www.diepxuan.com]
-match = 5.9%%
-title = Điệp Xuân Ruột gối kê Korea 45x65
+match = -5.9%%
+title = Ruột gối kê Korea 45x65 - Điệp Xuân
 url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 
 [entershopping.vn]
@@ -17,9 +17,9 @@ title = Ruột gối ép Hàn Quốc Korea , ruot-goi-ep-han-quoc-korea
 url = https://entershopping.vn/ruot-goi-ep-han-quoc-korea.html
 
 [www.detmaykimthanh.com]
-match = 52.9%%
-title = Ruột gối Standard
-url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-129.html
+match = 5.9%%
+title = Ruột gối Microfiber Korea Virgin
+url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
 match = 64.7%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
 [demxanh.com]
 match = -100.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorI5wxjaznGUbQot1MR_Nb-j7rc40bdVTYxyLHpN1SrSB1g12hm
+url = https://demxanh.com/ruot-goi.html
 
 [everonkorea.com]
 match = -100.0%%
