--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-10 04:23:04
+lastsearch = 2024-08-10 12:37:46
 
 [www.diepxuan.com]
 match = 36.4%%
@@ -47,8 +47,8 @@ title = Thảm trải sàn BLANC' | Thảm lông, thảm dệt 3D đổi trả .
 url = https://blanc.vn/tham-trai-san
 
 [demxanh.com]
-match = -54.5%%
-title = Đệm bông ép 1m4 (1m4x1m9 và 1m4x2m) giá ...
+match = -86.4%%
+title = Đệm bông ép 1m4 (1m4x1m9 và 1m4x2m) giá bao nhiêu?
 url = https://demxanh.com/dem-bong-ep-1m4x2m-140x200cm-gia-bao-nhieu.html
 
 [www.kymdan.com]
@@ -82,8 +82,8 @@ title = CĂN HỘ 2 TẦNG 8/10 pers, 110m2 KHỞI HÀNH/ARRIVEE SKIS ...
 url = https://www.airbnb.com.vn/rooms/1258488
 
 [comehome.com.vn]
-match = -77.3%%
-title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ ...
+match = -109.1%%
+title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ cho bé ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
@@ -162,8 +162,8 @@ title = Ga Chun 140 x 200 cm Bọc Nệm Cotton ... - JYSK.vn
 url = https://jysk.vn/ga-chun-140x200cm
 
 [noithatcaco.vn]
-match = -77.3%%
-title = 78+ mẫu giường bệt gỗ tự nhiên đẹp, sang trọng ...
+match = -109.1%%
+title = 78+ mẫu giường bệt gỗ tự nhiên đẹp, sang trọng với giá tốt
 url = https://noithatcaco.vn/cam-nang-noi-that/mau-giuong-bet-go-tu-nhien-dep-849.html
 
 [www.facebook.com]
