--- a/images/nem-everon-150x190x9/config.ini
+++ b/images/nem-everon-150x190x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-150x190x9.html
 lastopen = 2024-06-06 17:10:22
 
 [search]
-lastsearch = 2024-08-10 10:49:25
+lastsearch = 2024-08-10 12:57:05
 
 [everonvn.com.vn]
 match = 15.0%%
@@ -49,12 +49,12 @@ url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 [demxanh.com]
 match = -140.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOoqVUv26f10weMZ9llqvMysroaFASs4M9IrypR-hh4qCPwMtnj-C
 
 [thegioidemonline.com]
 match = -40.0%%
 title = Bảng giá nệm Sông Hồng mới nhất 2022
-url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html
+url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html?srsltid=AfmBOoohltc-N3JPP998cvawI-uqm-2NUvVMrQMln58wqogVRZzJ9kxa
 
 [www.diepxuan.com]
 match = 0.0%%
