--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-10 11:29:09
+lastsearch = 2024-08-10 12:57:47
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -67,9 +67,9 @@ title = Chăn Ga Everon EPM24068
 url = https://thegioinem.com/chan-ga-everon-epm24068.html
 
 [tongdailyeveron.com.vn]
-match = -3.2%%
-title = Đệm đa năng EVERON (nệm trải sàn, tấm trải đệm)
-url = https://tongdailyeveron.com.vn/products/dem-da-nang-everon-nem-trai-san-tam-trai-dem
+match = 0.0%%
+title = ĐỆM NEW EXTRA FOAM
+url = https://tongdailyeveron.com.vn/products/dem-new-extra-foam
 
 [shopee.vn]
 match = 6.5%%
