--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-10 11:57:55
+lastsearch = 2024-08-10 12:51:00
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -27,9 +27,9 @@ title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
 url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
 
 [everon.com.vn]
-match = 21.3%%
-title = ĐỆM LÒ XO KINGKOIL CLOUD FIRM | Khuyến Mại 77 Xã ...
-url = https://everon.com.vn/dem-lo-xo-kingkoil-cloud-firm/
+match = 23.4%%
+title = ĐỆM LÒ XO KINGKOIL (MỸ) Showroom Chăn Ga Gối đệm ...
+url = https://everon.com.vn/kingkoil/
 
 [sieuthidemhanquoc.com.vn]
 match = 33.3%%
@@ -47,9 +47,9 @@ title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
 url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [www.diepxuan.com]
-match = 55.3%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
+match = 31.8%%
+title = Điệp Xuân Nệm lò xo Everon Pocket 180x200x25
+url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-180x200x25.html
 
 [everon.online]
 match = 31.9%%
