--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-08-10 06:53:08
+lastsearch = 2024-08-10 12:47:51
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = Mai Ngô đến trễ 2 tiếng ở sơ khảo Hoa hậu Hòa bình ...
 url = https://www.facebook.com/photo.php?fbid=645364180290734&id=100044514726115&set=a.588659265961226&locale=vi_VN
 
 [voz.vn]
-match = -233.3%%
-title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trước ô tô?
+match = -293.3%%
+title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trước ô tô? | Page 5
 url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
-match = -206.7%%
-title = Cảm xúc của dàn diễn viên Lật Mặt 7 #tramanh #latmat7
-url = https://www.tiktok.com/@tramanhofficial/video/7362018785957596424
+match = -273.3%%
+title = OPPO RENO10 Cực kỳ xịn xò đang mở bán tại tất cả các cửa ...
+url = https://www.tiktok.com/@thodiasoctrang/video/7262708588185931015
 
 [www.reddit.com]
 match = -120.0%%
