--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-10 06:22:48
+lastsearch = 2024-08-10 13:00:14
 
 [ninhouse.vn]
 match = -146.2%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOoro6Wvl70KjTve9_Q1XPi9zTlWeRcVFDqsLt-N49jEKw5cQz7EB
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [www.lamido.vn]
 match = 46.2%%
@@ -94,7 +94,7 @@ url = https://songhong.info/vo-goi-om-song-hong-38x100-cotton
 [www.lazada.vn]
 match = -38.5%%
 title = Vỏ Gối Kẻ Tím Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/vo-goi-ke-tim/?srsltid=AfmBOoqEZGRd1RTLA-Bw5zpqKK2IlfIwlLeU9b4o1zfgxKbw752VEdFl
+url = https://www.lazada.vn/tag/vo-goi-ke-tim/
 
 [flexhouse.vn]
 match = -207.7%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -238.5%%
 title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi?srsltid=AfmBOoo31tZ4rv8mGb5TqqHx7UWNIhOCz7OeGazBGnwq6khd6jsewGTv
+url = https://jysk.vn/vo-goi
 
 [www.everonvn.vn]
 match = 15.4%%
