CI images update

--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-10 09:09:04
+lastsearch = 2024-08-10 13:26:44
 
 [demxanh.com]
 match = 37.0%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOopzPvdLi4abRHdpcqtSFW3-XhEDDCizz9C3SyJEMJ27Dn3gIEGN
+url = https://demxanh.com/chieu-truc-den.html
 
 [demre.com.vn]
 match = 66.7%%
@@ -42,9 +42,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 63.0%%
-title = Điệp Xuân Chiếu trúc Thái đen 160x200
-url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html?srsltid=AfmBOop8N4JCx685lu1QZl4L-7cnOjgOYjGVdN6O34BeFfD-myL_AYEQ
+match = 11.1%%
+title = Điệp Xuân Chiếu trúc trung quốc
+url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html
 
 [shopee.vn]
 match = -18.5%%
