--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-10 11:50:02
+lastsearch = 2024-08-10 13:21:12
 
 [www.instagram.com]
-match = -92.3%%
-title = Hoi Chan (@hoichandraws) - Instagram
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -215.4%%
+title = In a world where luxury brands reign supreme ...
+url = https://www.instagram.com/radii_media/p/C4ft1kFvyln/
 
 [hk.linkedin.com]
 match = -215.4%%
@@ -32,9 +32,9 @@ title = Podcasts
 url = https://www.linklaters.com/en-us/knowledge/podcasts
 
 [en.wikipedia.org]
-match = -11.1%%
-title = Fiona Sit
-url = https://en.wikipedia.org/wiki/Fiona_Sit
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Lucie_Daouphars
 
 [press.fourseasons.com]
 match = -269.2%%
