--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-10 06:35:22
+lastsearch = 2024-08-10 13:31:07
 
 [demxanh.com]
 match = -60.9%%
 title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOoq1sxEkAm1CxaRJi0fukMEFTYHyscwf3kU0g-mArXqQ_Mh4_j6u
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOoocQfwmyJn3xg3vd3ZOmCmjwPWPsw33tR1zrlWuqW5wk7b14-2o
 
 [www.lazada.vn]
 match = 47.8%%
 title = Chiếu Trúc cao bằng 1.4 X 1.95
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html?srsltid=AfmBOorvTxROr3gEqtJxU4i1dHBGRPlRTHoVizZVlwYFVopKw66DvJmW
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html?srsltid=AfmBOopn48iN0pEhOP1oRIOj8CWGVGwktCBgoUExyfjd7xkGfR1-S0jO
 
 [shopee.vn]
-match = 43.5%%
-title = Chiếu trúc cao bằng 1.4m x 1.95
-url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
+match = -73.9%%
+title = Chiếu trúc Cao Bằng loại một, có 5 loại kích thước 1,2m ...
+url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-loại-một-có-5-loại-kích-thước-1-2m-1m-0.9mvà-0.8m-i.17414239.2656259371
 
 [lombom.com]
 match = -60.9%%
@@ -27,14 +27,14 @@ title = Chiếu trúc Cao Bằng Cao Sơn chất lượng cao - Lombomshop!
 url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 
 [www.diepxuan.com]
-match = 21.7%%
-title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOoooKCRVAFkjyMKA9e6WpsVN8X5ROFiMmdL1qR7I0SndQjstHj2S
+match = 26.1%%
+title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html?srsltid=AfmBOooWgKFqVGc0KojHWyCHqzWE45AQTJUHo9hW61ZtcHbyNDu16zOJ
 
 [chieutrucsaigon.com]
-match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = -13.0%%
+title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [khodem.vn]
 match = -56.5%%
@@ -62,9 +62,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [baocaobang.vn]
-match = -113.0%%
-title = Văn bằng bảo hộ chỉ dẫn địa lý giúp chiếu trúc có cơ hội ...
-url = https://baocaobang.vn/-23720.html
+match = -78.3%%
+title = Thành phố Cao Bằng ngày 14/10 không mưa, nhiệt độ cao ...
+url = https://baocaobang.vn/Thanh-pho-Cao-Bang-ngay-1410-khong-mua-nhiet-do-cao-nhat-28oC-27033.html
 
 [www.youtube.com]
 match = -95.7%%
