--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-10 09:08:20
+lastsearch = 2024-08-10 13:25:22
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopiYoENhG-qrc4eoPycHSIUpd_04Wm2Q4RUPx1AWZcfP-SAqG2E
 
 [goni.vn]
 match = 14.8%%
@@ -17,14 +17,14 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = -25.9%%
-title = Chiếu điều hòa cho bé, chiếu mây điều hòa thoáng khí ...
-url = https://shopee.vn/Chiếu-điều-hòa-cho-bé-chiếu-mây-điều-hòa-thoáng-khí-không-bị-ẩm-mốc-cho-bé-ngủ-ngon-i.1042428909.23660866233
+match = -29.6%%
+title = Chiếu mây điều hòa Lidaco loại dày cực mát cho ngày hè
+url = https://shopee.vn/Chiếu-mây-điều-hòa-Lidaco-loại-dày-cực-mát-cho-ngày-hè-i.352833469.4282665950
 
 [foreverbedding.net]
-match = 0.0%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOopsd6jorWO8n26TDF8zVCEJbnp9He_E0Y4_r1RJXZazcxa-4zg4
+match = -59.3%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOoqc8NK5QqrTLkyuRVv_xfKW7P3__Ju8oW-3gylb-gsYv1x1Yf0x
 
 [congtynemthangloi.com]
 match = -29.6%%
@@ -84,7 +84,7 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOorbdSHTm8coDR10Je2IPrarRk7KQ16_zqvH5shJenSariWaO3wp
 
 [chieutrelinhchi.com]
 match = 0.0%%
