--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-08-10 12:20:07
+lastsearch = 2024-08-10 13:25:41
 
 [demxanh.com]
 match = -94.1%%
@@ -12,9 +12,9 @@ title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
 url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
 
 [chieutrelanlan.com]
-match = -100.0%%
-title = Chiếu trúc mắt nhỏ có viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-160x190cm-33.html
+match = -76.5%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 120x190cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-120x190cm-29.html
 
 [thegioidemtot.vn]
 match = -58.8%%
@@ -32,9 +32,9 @@ title = Bảng Giá tháng 4-5/2024 | Chiếu Trúc Hạt Đen | GIÁ TỐT ✅
 url = https://thegioidemviet.vn/chieu-truc-hat-den/
 
 [shopee.vn]
-match = -35.3%%
-title = Chiếu trúc hạt đen không viền loại đẹp
-url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-loại-đẹp-i.270303342.9119500161
+match = -105.9%%
+title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
 
 [vongxepsaigon.vn]
 match = 47.1%%
