--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-10 11:52:19
+lastsearch = 2024-08-10 13:24:19
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -29,12 +29,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOor2rlzALmXwnf2HAZKx2vz40g0pxnrpXTOYkBJg-GPQUb7j4y5e
+url = https://demxanh.com/chieu-truc.html
 
 [shopee.vn]
 match = -25.0%%
-title = Chiếu trúc 1m6 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m6
+title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [tongkhonem.com]
 match = 57.7%%
