--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-10 06:37:23
+lastsearch = 2024-08-10 13:28:47
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -97,8 +97,8 @@ title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
 url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [everonvn.com.vn]
-match = -75.0%%
-title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
+match = -115.0%%
+title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu? - Everon
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatgiakhanh.net]
