CI images update

--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-08-10 12:50:19
+lastsearch = 2024-08-10 13:47:26
 
 [www.instagram.com]
 match = -173.3%%
@@ -47,9 +47,9 @@ title = CHAN Hoi-man
 url = https://www.soc.cuhk.edu.hk/profile/chan-hoi-man/
 
 [hk.linkedin.com]
-match = -26.7%%
-title = Chan Hoi Yan - HKSAR government
-url = https://hk.linkedin.com/in/chan-hoi-yan-83322114b
+match = -146.7%%
+title = Hoi Man Chan - 新世界物業管理公司
+url = https://hk.linkedin.com/in/hoi-man-chan-5370b6215
 
 [www.polyu.edu.hk]
 match = -160.0%%
@@ -300,4 +300,9 @@ url = https://theorg.com/org/first-digital-trust/org-chart/hoi-chan
 match = -33.3%%
 title = Professor Chan, Celia Hoi Yan
 url = https://hub.hku.hk/rp/rp00498
+
+[repository.eduhk.hk]
+match = -13.3%%
+title = CHAN Hoi Huen 陳凱萱
+url = https://repository.eduhk.hk/en/persons/hoi-huen陳凱萱-chan
 
