--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-10 12:31:13
+lastsearch = 2024-08-10 13:45:40
 
 [shopee.vn]
-match = -24.0%%
-title = chiếu điều hòa kèm gối giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
+match = -4.0%%
+title = CHIẾU ĐIỀU HOÀ CAO SU NON CAO CẤP MODERN ...
+url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-CAO-SU-NON-CAO-CẤP-MODERN-(-video-quay-cận-chất)-i.46360011.4484797264
 
 [meoi.com.vn]
 match = 24.0%%
@@ -24,7 +24,7 @@ url = https://khoaibaby.vn/set-chieu-dieu-hoa-hermon-kem-goi-hk2212
 [vtvhyundai.vn]
 match = -24.0%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOopqn-fPwgYLgKYJB4mlgThOpAy1dTY630yp61o9Ef8FWqo07F7K
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [voicon.net]
 match = 36.0%%
@@ -39,7 +39,7 @@ url = https://phatdatbinhthoi.com.vn/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-
 [demxanh.com]
 match = -40.0%%
 title = Chiếu điều hòa 4D Hanvico Cool Mattress kẻ kem (XẢ KHO)
-url = https://demxanh.com/chieu-dieu-hoa-4d-hanvico-cool-mattress-ke-kem.html?srsltid=AfmBOoqmwO9-o6DMVUbhTASLTMLQPbZCWl-MIP9n2fJbGlvoHI6-39T6
+url = https://demxanh.com/chieu-dieu-hoa-4d-hanvico-cool-mattress-ke-kem.html
 
 [tiki.vn]
 match = -20.0%%
