CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-10 13:43:17
+lastsearch = 2024-08-10 14:13:12
 
 [everon.online]
 match = 15.4%%
@@ -124,7 +124,7 @@ url = https://vpphongha.vn/products/vo-4-oly-hong-ha-48-trang-0555-trang-nguyen
 [everonvn.com.vn]
 match = -88.5%%
 title = Hướng dẫn cách giặt ruột gối sạch sẽ bằng tay và bằng máy giặt
-url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat?srsltid=AfmBOoq4bPi6TBVIv96Wm0WBRBy_cQYgneAmfhuOyHWfMyaxIP3lCT4s
+url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat
 
 [www.youtube.com]
 match = -23.1%%
