--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-10 11:46:18
+lastsearch = 2024-08-10 14:14:17
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOopkzwnsZw8-X2G9qPYFUNXSaaXdSv9KfDDlEK8Az2YzKQg3-4mt
 
 [www.everonqb.com]
-match = -9.5%%
-title = Everon Quảng Bình Ga phủ EPM19043 180x200
+match = -66.7%%
+title = Ga phủ EPM19043 180x200 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
 
 [www.diepxuan.com]
 match = -19.0%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOorzdIL_z0u_2abnW8bCxDYo9_vtMLOZnqwWwNIAF_FO22wsCzhv
 
 [muathongminh.vn]
 match = -66.7%%
