--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-10 04:36:20
+lastsearch = 2024-08-10 14:11:49
 
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOoryFpNLgjy5Vi9TeS2M01udq6UJ23HOW2LgjS2F6EvpOX6y_n5_
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [noithatdaithanh.vn]
 match = -47.6%%
