--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-10 05:44:13
+lastsearch = 2024-08-10 14:11:28
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -212.5%%
-title = 16. Tạ Tử Thành tỉnh lại vào buổi sáng hôm sau, hắn vừa ...
-url = https://m.facebook.com/100078695363159/photos/493851199914721/
+match = -250.0%%
+title = Biến số khó lường - VKE vs TW | Bán kết Nhánh thắng 2 | VCS ...
+url = https://m.facebook.com/vcslmht/videos/biến-số-khó-lường-vke-vs-tw-bán-kết-nhánh-thắng-2-vcs-2024-mùa-hè/1054898946051993/
 
 [www.sjcallahabad.org]
 match = -212.5%%
