--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-08-10 13:45:00
+lastsearch = 2024-08-10 14:27:46
 
 [www.lazada.vn]
 match = -60.9%%
@@ -52,9 +52,9 @@ title = Chiếu Tre Việt Phổ Mến Thái Bình cao cấp - Chăn ga gối đ
 url = https://chuyenhangviet.com/chieu-tre-viet-pho-men-thai-binh-cao-cap/
 
 [tiki.vn]
-match = 26.1%%
-title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
-url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p160055664.html
+match = -65.2%%
+title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
+url = https://tiki.vn/chieu-nhua-thai-binh-chieu-trai-an-com-gap-gon-du-kich-thuoc-p260144972.html
 
 [www.lamchame.com]
 match = -69.6%%
