--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-10 11:33:22
+lastsearch = 2024-08-10 14:13:35
 
 [www.tiktok.com]
 match = -152.9%%
@@ -670,4 +670,9 @@ url = https://ncdoj.gov/protecting-consumers/home-repair-and-products/homeowners
 match = 0.0%%
 title = 
 url = https://www.energy.gov/nnsa/articles/nuclear-weapons-life-cycle-fact-sheet
+
+[dessaules.com]
+match = 0.0%%
+title = 
+url = https://dessaules.com/blog/how-to-fight-hoa-fines
 
