--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-10 13:47:27
+lastsearch = 2024-08-10 14:22:33
 
 [noithathomy.com]
 match = -42.9%%
@@ -22,9 +22,9 @@ title = Thảm bali 2m x 3m cao cấp
 url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
 
 [tiki.vn]
-match = -85.7%%
-title = Mua Thảm trải sàn Bali giá rẻ chất lượng 2m*3m. m6*2m3
-url = https://tiki.vn/tham-trai-san-bali-gia-re-chat-luong-2m-3m-m6-2m3-p143202560.html
+match = -133.3%%
+title = Mua Thảm trải sàn Sofa sang trọng hiện đại trang trí phòng ...
+url = https://tiki.vn/tham-trai-san-sofa-sang-trong-hien-dai-trang-tri-phong-khach-bali-in-3d-nhung-ni-li-cao-cap-bl09-khoi-tron-vang-bl26-buom-vang-2m-x-3m-p74527455.html
 
 [muachunghaiphong.com]
 match = 0.0%%
